Commit translated content

--- a/docs/csharp/misc/cs3008.md
+++ b/docs/csharp/misc/cs3008.md
@@ -10,16 +10,16 @@ ms.assetid: 593f6114-bc7b-4789-958f-97bbf99c1c9f
 caps.latest.revision: "10"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: f41cec2dbb283ee5e1edcdc001e2c15a3e9e9006
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 7ebe4b1d364f3422e1d800e72c02eda405b1e0fb
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="compiler-warning-level-1-cs3008"></a>コンパイラの警告 (レベル 1) CS3008
 大文字、小文字の違いのみの識別子 'identifier' は CLS に準拠していません。  
   
- A[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`識別子がアンダー スコア文字 (_) で始まる場合、共通言語仕様 (CLS) に対応を中断します。CLS 準拠の詳細については、次を参照してください。 [CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)と[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)です。  
+ A[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`識別子がアンダー スコア文字で始まる場合、共通言語仕様 (CLS) に対応を中断 (\_)。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。  
   
 ## <a name="example"></a>例  
  次の例では、CS3008 が生成されます。  
