--- a/docs/csharp/misc/cs3012.md
+++ b/docs/csharp/misc/cs3012.md
@@ -10,16 +10,16 @@ ms.assetid: 1f7555b4-61e4-4821-85c9-586301df4c5c
 caps.latest.revision: "11"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 1f8526f5967a205fe04c96b034b030d3c77ff6e0
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 6c0b777e55584790dc89ed02530f4b5a42167940
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="compiler-warning-level-1-cs3012"></a>コンパイラの警告 (レベル 1) CS3012
 アセンブリの CLSCompliant 属性と異なるモジュールの CLSCompliant 属性は指定できません  
   
- `[module:System.CLCSompliant(true)]`を通じて、モジュールが共通言語仕様 (CLS) に準拠するためには、 [/target:module](../../csharp/language-reference/compiler-options/target-module-compiler-option.md) コンパイラ オプションを使用してビルドする必要があります。 CLS の詳細については、次を参照してください。[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)です。  
+ `[module:System.CLCSompliant(true)]`を通じて、モジュールが共通言語仕様 (CLS) に準拠するためには、 [/target:module](../../csharp/language-reference/compiler-options/target-module-compiler-option.md) コンパイラ オプションを使用してビルドする必要があります。 CLS の詳細については、次を参照してください。[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)です。  
   
 ## <a name="example"></a>例  
  次の例では、 `/target:module`を使用せずにビルドすると CS3012 が生成されます。  
