--- a/docs/csharp/misc/cs3015.md
+++ b/docs/csharp/misc/cs3015.md
@@ -10,16 +10,16 @@ ms.assetid: 58182215-0c2f-4497-8baf-ffb29f18d6c7
 caps.latest.revision: "9"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: f4cce8e3b3095fd6d8b5d691ccb58f5e585b6dd2
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 6bd903929061704a3aa06311aafe69aeab5fea8c
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="compiler-warning-level-1-cs3015"></a>コンパイラの警告 (レベル 1) CS3015
 'method signature' には、CLS 準拠型のみを使用する、アクセス可能なコンストラクターがありません  
   
- 共通言語仕様 (CLS: Common Language Specification) に準拠するためには、属性クラスの引数リストに配列を含めることはできません。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。  
+ 共通言語仕様 (CLS: Common Language Specification) に準拠するためには、属性クラスの引数リストに配列を含めることはできません。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。  
   
 ## <a name="example"></a>例  
  次の例では C3015 が生成されます。  
