--- a/docs/visual-basic/misc/bc40030.md
+++ b/docs/visual-basic/misc/bc40030.md
@@ -12,16 +12,16 @@ ms.assetid: f1cfcf04-2a99-46ef-ac87-34cc2099125c
 caps.latest.revision: "15"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: bfd469319e02ffc28d059dc8b4d76a656ec9f427
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: ea701de3844a383065e0f1a11cefa79efbc00d03
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="type-39lttypename1gt39-cannot-be-marked-cls-compliant-because-its-containing-type-39lttypename2gt39-is-not-cls-compliant"></a>型 &#39;&lt;typename1&gt;&#39; マークできません CLS に準拠してそれを含む型 &#39;&lt;typename2&gt;&#39; CLS 準拠ではありません
 クラスまたはインターフェイスが、 `<CLSCompliant(True)>` としてマークされている型に入れ子になっているか、またはマークされていないときに、 `<CLSCompliant(False)>` としてマークされています。  
   
- クラスまたはインターフェイスに準拠する、[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)(CLS) に、そのコンテインメント階層全体は準拠である必要があります。 つまり、入れ子になったすべての型が準拠している必要があります。  
+ クラスまたはインターフェイスに準拠する、[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)(CLS) に、そのコンテインメント階層全体は準拠である必要があります。 つまり、入れ子になったすべての型が準拠している必要があります。  
   
  プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定して、準拠または非準拠を示します。 このパラメーターには既定値がありません。値を指定する必要があります。  
   
