--- a/docs/visual-basic/misc/bc40034.md
+++ b/docs/visual-basic/misc/bc40034.md
@@ -12,16 +12,16 @@ ms.assetid: 4eb36b3a-1bbe-4e99-9ecb-a12b8729b128
 caps.latest.revision: "9"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: 2a2238216d88a3adb9bb4220414838305213e623
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: e9f1c1186dd79cbf2a08951cfd564c5be9a7955b
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="non-cls-compliant-39mustoverride39-member-is-not-allowed-in-a-cls-compliant-ltclassnamegt"></a>CLS 非準拠 &#39;MustOverride &#39;メンバーは、CLS 準拠では許可されません&lt;classname&gt;
 クラスは `<CLSCompliant(True)>`としてマークされていますが、 `MustOverride` プロパティが含まれているか、 `<CLSCompliant(False)>` としてマークされているプロシージャまたはマークされていないプロシージャが含まれています。  
   
- クラスに準拠している場合、[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)(CLS) に、そのクラスを使用するアプリケーションとしてもマークされているメンバーだけにアクセスする`<CLSCompliant(True)>`とメンバーを無視します。ありません。 ただし、アプリケーションは `MustOverride` プロパティやプロシージャを無視できません。アプリケーションは、そのプロパティまたはプロシージャをオーバーライドするためにそれにアクセスする必要があるためです。  
+ クラスに準拠している場合、[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)(CLS) に、そのクラスを使用するアプリケーションとしてもマークされているメンバーだけにアクセスする`<CLSCompliant(True)>`とメンバーを無視します。ありません。 ただし、アプリケーションは `MustOverride` プロパティやプロシージャを無視できません。アプリケーションは、そのプロパティまたはプロシージャをオーバーライドするためにそれにアクセスする必要があるためです。  
   
  プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、準拠または非準拠を示すために、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定します。 このパラメーターには既定値がありません。値を指定する必要があります。  
   
