--- a/docs/visual-basic/misc/bc40040.md
+++ b/docs/visual-basic/misc/bc40040.md
@@ -12,16 +12,16 @@ ms.assetid: c640dd59-56a9-43ed-b199-32a60f7b9b06
 caps.latest.revision: "10"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: 826797a2e8e76bbe4fef28efed02dd6b64d9a41f
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: ecb4c2382c5ee7338af8d2678410a16a94d094a4
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="generic-parameter-constraint-type-lttypenamegt-is-not-cls-compliant"></a>ジェネリック パラメーターの制約型&lt;typename&gt; CLS 準拠ではありません
 ジェネリック型が `<CLSCompliant(True)>`としてマークされていますが、1 つの型パラメーターに対する制約で指定している型が `<CLSCompliant(False)>`としてマークされているか、マークされていないか、非準拠の型であるため修飾されていません。  
   
- 準拠する型の[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)CLS 準拠型のみを使用して必要があります (CLS) にします。 このことは、ジェネリック型の型パラメーターに対する制約にも当てはまります。  
+ 準拠する型の[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)CLS 準拠型のみを使用して必要があります (CLS) にします。 このことは、ジェネリック型の型パラメーターに対する制約にも当てはまります。  
   
  次の [!INCLUDE[vbprvb](~/includes/vbprvb-md.md)] データ型は CLS に準拠していません。  
   
