--- a/docs/visual-basic/misc/bc40043.md
+++ b/docs/visual-basic/misc/bc40043.md
@@ -12,16 +12,16 @@ ms.assetid: 2ff45c09-32be-4ca9-b42a-63ce2536db7d
 caps.latest.revision: "11"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: f63bf869999f561e83b28aed2ca523249ef8cc98
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 5571306ad5d0cedb7f0fc2573e87b192c41aca04
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="systemclscompliantattribute-cannot-be-applied-to-property-39get3939set39"></a>System.CLSCompliantAttribute はプロパティ &#39; には適用できません。Get &#39;/(& a) #39 です。セット &#39;
 プロパティ定義は、 <xref:System.CLSCompliantAttribute> 属性を `Get` ステートメントまたは `Set` ステートメントに適用します。  
   
- 準拠するプロパティの[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)(CLS) に、全体のプロパティとしてマークする必要があります`<CLSCompliant(True)>`です。 適用する必要があります<xref:System.CLSCompliantAttribute>を[Property ステートメント](../../visual-basic/language-reference/statements/property-statement.md)ではなく、`Get`または`Set`ステートメントです。  
+ 準拠するプロパティの[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)(CLS) に、全体のプロパティとしてマークする必要があります`<CLSCompliant(True)>`です。 適用する必要があります<xref:System.CLSCompliantAttribute>を[Property ステートメント](../../visual-basic/language-reference/statements/property-statement.md)ではなく、`Get`または`Set`ステートメントです。  
   
  プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定して、準拠または非準拠を示します。 このパラメーターには既定値がありません。値を指定する必要があります。  
   
