--- a/docs/visual-basic/misc/bc42205.md
+++ b/docs/visual-basic/misc/bc42205.md
@@ -12,11 +12,11 @@ ms.assetid: c36feb10-dded-4073-9553-af278ae5560b
 caps.latest.revision: "10"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: de057afbf6d09acea3c58bd605a2819169b425fb
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 713c99719cc2227bb5d1d9340ba8eb653379aebf
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="assembly-39ltfilepath1gt39-references-assembly-39ltassemblyidentitygt39-which-is-ambiguous-between-39ltfilepath2gt39-and-39ltfilepath3gt39"></a>アセンブリ &#39;&lt;filepath1&gt;&#39; 参照アセンブリ &#39;&lt;assemblyidentity&gt;&#39;、間であいまいである (& m); #39&lt;filepath2&gt;&#39; と &#39;&lt;filepath3&gt;&#39;です。
 アセンブリ '\<filepath1 >' アセンブリ参照'\<assemblyidentity > 'は、間においてあいまい'\<filepath2 >' と '\<filepath3 >' です。 '\<filepath2 >' が適用されます。  
@@ -38,5 +38,5 @@ ms.lasthandoff: 11/21/2017
 2.  選択したファイルへの同一のファイル パスを使用するように、このアセンブリへのすべてのファイル参照を変更します。  
   
 ## <a name="see-also"></a>関連項目  
- [共通言語ランタイムのアセンブリ](https://msdn.microsoft.com/library/k3677y81)  
+ [共通言語ランタイムのアセンブリ](../../../docs/framework/app-domains/assemblies-in-the-common-language-runtime.md)  
  [プロジェクト内の参照の管理](/visualstudio/ide/managing-references-in-a-project)  
