--- a/docs/csharp/misc/cs3001.md
+++ b/docs/csharp/misc/cs3001.md
@@ -10,16 +10,16 @@ ms.assetid: c4f3e247-5e47-4182-b415-c573fb1a152f
 caps.latest.revision: "8"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 40d631c72c96bddd090fdae20830deaeab7f0531
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 2bec0c26e084c4c4d9a734e8116dcf5c2bb2120a
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="compiler-warning-level-1-cs3001"></a>コンパイラの警告 (レベル 1) CS3001
 引数型 'type' は CLS に準拠していません  
   
- A[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`メソッドの型が共通言語仕様 (CLS) に準拠しているパラメーターを受け入れる必要があります。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。  
+ A[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`メソッドの型が共通言語仕様 (CLS) に準拠しているパラメーターを受け入れる必要があります。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。  
   
 ## <a name="example"></a>例  
  次の例では、CS3001 エラーが生成されます。  
