--- a/docs/csharp/misc/cs3002.md
+++ b/docs/csharp/misc/cs3002.md
@@ -10,16 +10,16 @@ ms.assetid: 34f19735-76d2-4d78-bd52-45989a86fca4
 caps.latest.revision: "9"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 27cca2bd94b434c5facb5c18d39f8d9f1e2acf22
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 822e613a3271107d50d8008dece69110fbfb4cf8
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="compiler-warning-level-1-cs3002"></a>コンパイラの警告 (レベル 1) CS3002
 'method' の戻り値の型は CLS に準拠していません  
   
- A[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`メソッドの型が共通言語仕様 (CLS) に準拠している値を返す必要があります。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。  
+ A[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`メソッドの型が共通言語仕様 (CLS) に準拠している値を返す必要があります。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。  
   
 ## <a name="example"></a>例  
  次の例では CS3002 が生成されます。  
