--- a/docs/csharp/misc/cs3005.md
+++ b/docs/csharp/misc/cs3005.md
@@ -10,16 +10,16 @@ ms.assetid: 64b687e3-2dbd-45dd-b6da-81f77eb7d6bd
 caps.latest.revision: "9"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: a2ebf636c21b0a9d012c9c22fb47d1444df12023
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 82d884afd4fba16876872163edfdf283a47e20a9
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="compiler-warning-level-1-cs3005"></a>コンパイラの警告 (レベル 1) CS3005
 大文字、小文字の違いのみの識別子 'identifier' は CLS に準拠していません。  
   
- A[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`識別子で、他と異なる`public`、 `protected`、または`protected internal`が 1 つまたは複数の文字の場合にのみの識別子準拠していない共通言語仕様 (CLS) にします。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。  
+ A[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`識別子で、他と異なる`public`、 `protected`、または`protected internal`が 1 つまたは複数の文字の場合にのみの識別子準拠していない共通言語仕様 (CLS) にします。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。  
   
 ## <a name="example"></a>例  
  次の例では、CS3003 エラーが生成されます。  
