--- a/docs/csharp/misc/cs3010.md
+++ b/docs/csharp/misc/cs3010.md
@@ -10,16 +10,16 @@ ms.assetid: d57bd750-df15-4e6a-9579-66de8b276b7e
 caps.latest.revision: "12"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 7fa37eeb0e6d1d9d08604f2d28d5d8187e1ee36d
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 7329a73133860fcef1cc5c1bbed0ababf758dfcd
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="compiler-warning-level-1-cs3010"></a>コンパイラの警告 (レベル 1) CS3010
 'member': CLS 準拠のインターフェイスは CLS 準拠メンバーのみを含まなければなりません  
   
- `[assembly:CLCSompliant(true)]`でマークされたアセンブリには、インターフェイスに `[CLCSompliant(false)]`でマークされたメンバーが含まれています。 共通言語仕様 (CLS) 準拠の属性の 1 つを削除します。 CLS 準拠の詳細については、次を参照してください。 [ \<PAVE OVER > CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)と[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)です。  
+ `[assembly:CLCSompliant(true)]`でマークされたアセンブリには、インターフェイスに `[CLCSompliant(false)]`でマークされたメンバーが含まれています。 共通言語仕様 (CLS) 準拠の属性の 1 つを削除します。 CLS 準拠の詳細については、次を参照してください。 [ \<PAVE OVER > CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)と[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)です。  
   
 ## <a name="example"></a>例  
  次の例では、CS3010 エラーが生成されます。  
