--- a/docs/csharp/misc/cs3014.md
+++ b/docs/csharp/misc/cs3014.md
@@ -10,16 +10,16 @@ ms.assetid: 6825b42f-1820-4265-b8d8-9b3387d7c130
 caps.latest.revision: "12"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 5da7b123cc2e88c20dc0e9d61bfb80e28ae8f299
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 1cc4eedd91310439316904fca649834e3856c2f7
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="compiler-warning-level-1-cs3014"></a>コンパイラの警告 (レベル 1) CS3014
 アセンブリに CLSCompliant 属性が含まれていないため、'member' には CLSCompliant 属性が必要ありません。  
   
- 共通言語仕様 (CLS) への準拠が指定されていないソース コード ファイルで、ファイル内の構成体が CLS 準拠としてマークされました。 これは認められていません。 この警告を解決するには、ファイルにアセンブリ レベルの CLS 準拠属性を追加します (次の例では、アセンブリ レベル属性を含む行をコメント解除します)。 CLS 準拠の詳細については、次を参照してください。 [CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)と[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)です。  
+ 共通言語仕様 (CLS) への準拠が指定されていないソース コード ファイルで、ファイル内の構成体が CLS 準拠としてマークされました。 これは認められていません。 この警告を解決するには、ファイルにアセンブリ レベルの CLS 準拠属性を追加します (次の例では、アセンブリ レベル属性を含む行をコメント解除します)。 CLS 準拠の詳細については、次を参照してください。 [CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)と[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)です。  
   
 ## <a name="example"></a>例  
  次の例では、CS3014 が生成されます。  
