--- a/docs/csharp/misc/cs3016.md
+++ b/docs/csharp/misc/cs3016.md
@@ -10,16 +10,16 @@ ms.assetid: b2ae721d-13ab-4e9d-a288-741d7825defe
 caps.latest.revision: "9"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: bf8a8cc8891c43295aae78a34590b2c808f81ebb
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: addc0b8383b3853ae42c0286dfd7153b688e0342
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="compiler-warning-level-1-cs3016"></a>コンパイラの警告 (レベル 1) CS3016
 属性の引数としての配列は CLS 準拠ではありません  
   
- 属性に配列を渡すことは、共通言語仕様 (CLS) に準拠していません。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。  
+ 属性に配列を渡すことは、共通言語仕様 (CLS) に準拠していません。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。  
   
 ## <a name="example"></a>例  
  次の例では CS3016 が生成されます。  
