--- a/docs/csharp/misc/cs3017.md
+++ b/docs/csharp/misc/cs3017.md
@@ -10,16 +10,16 @@ ms.assetid: 8e56b2f0-9caf-4c9a-98c2-d3ad0b70e767
 caps.latest.revision: "8"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: c63bcfbc15555dc8e02063bcdd1be7a7c50a3d1a
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 13127de7f7e6e3994956ac3993d6d27e375c7328
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="compiler-warning-level-1-cs3017"></a>コンパイラの警告 (レベル 1) CS3017
 アセンブリの CLSCompliant 属性と異なるモジュールの CLSCompliant 属性は指定できません  
   
- モジュールの CLSCompliant 属性と矛盾するアセンブリの CLSCompliant 属性があると、この警告が発生します。 CLS 準拠であるアセンブリには、CLS 準拠でないモジュールを含めることができません。 この警告を解決するには、アセンブリとモジュールの CLSCompliant 属性を両方 true、または両方 false のどちらかにするか、片方の属性を削除してください。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。  
+ モジュールの CLSCompliant 属性と矛盾するアセンブリの CLSCompliant 属性があると、この警告が発生します。 CLS 準拠であるアセンブリには、CLS 準拠でないモジュールを含めることができません。 この警告を解決するには、アセンブリとモジュールの CLSCompliant 属性を両方 true、または両方 false のどちらかにするか、片方の属性を削除してください。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。  
   
 ## <a name="example"></a>例  
  次の例では、CS3017 が生成されます。  
