--- a/docs/csharp/misc/cs3018.md
+++ b/docs/csharp/misc/cs3018.md
@@ -10,16 +10,16 @@ ms.assetid: 35d2f4bd-10c3-4e9f-8e02-389ab84db2cd
 caps.latest.revision: "11"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 88e891af2ffbe76db16fbfb83d3ddf9a9a457e0d
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 9cb09c412ac2a232409119071def099d79b20ad9
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="compiler-warning-level-1-cs3018"></a>コンパイラの警告 (レベル 1) CS3018
 CLS に準拠していない型 'type' のメンバーであるため、'type' を CLS 準拠として設定できません  
   
- この警告は、CLSCompliant 属性が `true` に設定された入れ子のクラスが、CLSCompliant 属性が `false`に設定されたクラスのメンバーとして宣言されている場合に発生します。 CLS 準拠ではない外部クラスのメンバーである場合、入れ子になったクラスを CLS 準拠にすることはできないため、このような記述は使用できません。 この警告を解決するには、入れ子になったクラスから CLSCompliant 属性を削除するか、属性の設定を `true` から `false`に変更します。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。  
+ この警告は、CLSCompliant 属性が `true` に設定された入れ子のクラスが、CLSCompliant 属性が `false`に設定されたクラスのメンバーとして宣言されている場合に発生します。 CLS 準拠ではない外部クラスのメンバーである場合、入れ子になったクラスを CLS 準拠にすることはできないため、このような記述は使用できません。 この警告を解決するには、入れ子になったクラスから CLSCompliant 属性を削除するか、属性の設定を `true` から `false`に変更します。 CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。  
   
 ## <a name="example"></a>例  
  次の例では CS3018 が生成されます。  
