--- a/docs/csharp/misc/cs3019.md
+++ b/docs/csharp/misc/cs3019.md
@@ -10,11 +10,11 @@ ms.assetid: b41117cf-8956-4989-93fd-9903812e2d2f
 caps.latest.revision: "9"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 68a0853afb18c26ffceb82cc6c59acbf7473103a
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 7bc975ccaaf7f89b7a9963edb22d82f67bba3aff
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="compiler-warning-level-2-cs3019"></a>コンパイラの警告 (レベル 2) CS3019
 'type' はこのアセンブリの外から認識できないため、'type' で CLS 準拠の確認は実行されません  
@@ -48,4 +48,4 @@ class C
 ```  
   
 ## <a name="see-also"></a>関連項目  
- [言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)
+ [言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)
