--- a/docs/visual-basic/misc/bc40026.md
+++ b/docs/visual-basic/misc/bc40026.md
@@ -12,16 +12,16 @@ ms.assetid: debcd5e4-75e7-4b14-a6cc-18f1009fe52c
 caps.latest.revision: "12"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: 6bd0da43c3d547efdf1103a3cc697886408723a3
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: d65056388dc58b0f27707745e344a48a038597dc
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="39ltclassnamegt39-is-not-cls-compliant-because-it-derives-from-39ltbaseclassnamegt39-which-is-not-cls-compliant"></a>&#39;です。&lt;classname&gt;&#39; から派生しているために、CLS に準拠していない &#39;&lt;baseclassname&gt;&#39;、これは CLS に準拠していません
 クラスまたはインターフェイスが `<CLSCompliant(True)>` としてマークされていますが、これらの派生元の型、またはこれらが実装している型が `<CLSCompliant(False)>` としてマークされているか、マークされていません。  
   
- クラスまたはインターフェイスに準拠する、[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)(CLS) に、継承階層全体は準拠である必要があります。 つまり、直接的または間接的に継承する型をすべて CLS に準拠させる必要があります。 同様に、クラスが 1 つ以上のインターフェイスを実装する場合は、そのすべてのインターフェイスの継承階層全体を CLS 準拠にする必要があります。  
+ クラスまたはインターフェイスに準拠する、[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)(CLS) に、継承階層全体は準拠である必要があります。 つまり、直接的または間接的に継承する型をすべて CLS に準拠させる必要があります。 同様に、クラスが 1 つ以上のインターフェイスを実装する場合は、そのすべてのインターフェイスの継承階層全体を CLS 準拠にする必要があります。  
   
  プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、準拠または非準拠を示すために、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定します。 このパラメーターには既定値がありません。値を指定する必要があります。  
   
