--- a/docs/visual-basic/misc/bc40038.md
+++ b/docs/visual-basic/misc/bc40038.md
@@ -12,16 +12,16 @@ ms.assetid: ec850295-b2fe-4f19-b808-d22fe0aaa32d
 caps.latest.revision: "8"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: b32df2e3e5bb78099fc5e2e2beab0e6ec90464ed
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 5802e3def17a3cc48e292139463d372e12f6be0e
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="root-namespace-ltnamespacenamegt-is-not-cls-compliant"></a>ルート名前空間&lt;namespacename&gt; CLS 準拠ではありません
 アセンブリが `<CLSCompliant(True)>`としてマークされているのに、ルート名前空間の名前がアンダースコア (`_`) で始まっています。  
   
- プログラミング要素に準拠するためには、1 つまたは複数アンダー スコアを含めることができます、[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)(CLS) に始めることはできません、アンダー スコアを使用します。 「 [Declared Element Names](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)」を参照してください。  
+ プログラミング要素に準拠するためには、1 つまたは複数アンダー スコアを含めることができます、[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)(CLS) に始めることはできません、アンダー スコアを使用します。 「 [Declared Element Names](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)」を参照してください。  
   
  プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定して、準拠または非準拠を示します。 このパラメーターには既定値がありません。値を指定する必要があります。  
   
