--- a/docs/visual-basic/misc/bc42203.md
+++ b/docs/visual-basic/misc/bc42203.md
@@ -12,11 +12,11 @@ ms.assetid: 26a3fa34-ec5d-4817-a947-3959446a924a
 caps.latest.revision: "8"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: bd6dc10fd166b5dd2cb00d948e022fd655900fd2
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 99a54b90f81caaf3c20c270a07ced4aaca2ed01c
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 12/09/2017
 ---
 # <a name="project-39ltprojectnamegt39-requires-a-reference-to-version-39ltversionnumber1gt39-of-assembly-39ltassemblynamegt39-but-references-version-39ltversionnumber2gt39-of-assembly-39ltassemblynamegt39-visual-basic-warning"></a>プロジェクト &#39;&lt;projectname&gt;&#39; バージョン &#39; への参照を必要と&lt;versionnumber1&gt;&#39; アセンブリ &#39; の&lt;assemblyname&gt;&#39;以外の場合が、参照バージョン &#39;&lt;versionnumber2&gt;&#39; アセンブリ &#39; の&lt;assemblyname&gt;&#39;です。(Visual Basic 警告)
 プロジェクト '\<projectname >' のバージョンへの参照が必要です'\<versionnumber1 >' アセンブリの '\<assemblyname >'、参照のバージョンでは'\<versionnumber2 >' のアセンブリ '\<assemblyname >' です。 バージョンへの参照 '\<versionnumber1 >' 生成されます。  
@@ -34,7 +34,7 @@ ms.lasthandoff: 11/21/2017
 -   以前のバージョンのアセンブリへの間接参照を削除するか、または以降のバージョンへの参照に変更します。  
   
 ## <a name="see-also"></a>関連項目  
- [共通言語ランタイムのアセンブリ](https://msdn.microsoft.com/library/k3677y81)  
+ [共通言語ランタイムのアセンブリ](../../../docs/framework/app-domains/assemblies-in-the-common-language-runtime.md)  
  [NIB: 名前空間およびコンポーネントの参照](http://msdn.microsoft.com/en-us/568fa759-796b-44cd-bf5e-1cf8de6e38fd)  
  [プロジェクト内の参照の管理](/visualstudio/ide/managing-references-in-a-project)  
  [NIB: 参照の管理](http://msdn.microsoft.com/en-us/910912ce-0dc9-4569-9274-32c44a20cb2c)  
