Commit bilingual files

--- a/docs/visual-basic/misc/bc40043.md
+++ b/docs/visual-basic/misc/bc40043.md
@@ -12,32 +12,32 @@ ms.assetid: 2ff45c09-32be-4ca9-b42a-63ce2536db7d
 caps.latest.revision: "11"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: f63bf869999f561e83b28aed2ca523249ef8cc98
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 5571306ad5d0cedb7f0fc2573e87b192c41aca04
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="systemclscompliantattribute-cannot-be-applied-to-property-39get3939set39"></a><span data-ttu-id="3b535-102">System.CLSCompliantAttribute はプロパティ &#39; には適用できません。Get &#39;/(& a) #39 です。セット &#39;</span><span class="sxs-lookup"><span data-stu-id="3b535-102">System.CLSCompliantAttribute cannot be applied to property &#39;Get&#39;/&#39;Set&#39;</span></span>
-<span data-ttu-id="3b535-103">プロパティ定義は、 <xref:System.CLSCompliantAttribute> 属性を `Get` ステートメントまたは `Set` ステートメントに適用します。</span><span class="sxs-lookup"><span data-stu-id="3b535-103">A property definition applies the <xref:System.CLSCompliantAttribute> attribute to its `Get` or `Set` statement.</span></span>  
+# <a name="systemclscompliantattribute-cannot-be-applied-to-property-39get3939set39"></a><span data-ttu-id="19880-102">System.CLSCompliantAttribute はプロパティ &#39; には適用できません。Get &#39;/(& a) #39 です。セット &#39;</span><span class="sxs-lookup"><span data-stu-id="19880-102">System.CLSCompliantAttribute cannot be applied to property &#39;Get&#39;/&#39;Set&#39;</span></span>
+<span data-ttu-id="19880-103">プロパティ定義は、 <xref:System.CLSCompliantAttribute> 属性を `Get` ステートメントまたは `Set` ステートメントに適用します。</span><span class="sxs-lookup"><span data-stu-id="19880-103">A property definition applies the <xref:System.CLSCompliantAttribute> attribute to its `Get` or `Set` statement.</span></span>  
   
- <span data-ttu-id="3b535-104">準拠するプロパティの[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)(CLS) に、全体のプロパティとしてマークする必要があります`<CLSCompliant(True)>`です。</span><span class="sxs-lookup"><span data-stu-id="3b535-104">For a property to be compliant with the [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3) (CLS), the entire property must be marked as `<CLSCompliant(True)>`.</span></span> <span data-ttu-id="3b535-105">適用する必要があります<xref:System.CLSCompliantAttribute>を[Property ステートメント](../../visual-basic/language-reference/statements/property-statement.md)ではなく、`Get`または`Set`ステートメントです。</span><span class="sxs-lookup"><span data-stu-id="3b535-105">You must apply <xref:System.CLSCompliantAttribute> to the [Property Statement](../../visual-basic/language-reference/statements/property-statement.md), not to either the `Get` or the `Set` statement.</span></span>  
+ <span data-ttu-id="19880-104">準拠するプロパティの[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)(CLS) に、全体のプロパティとしてマークする必要があります`<CLSCompliant(True)>`です。</span><span class="sxs-lookup"><span data-stu-id="19880-104">For a property to be compliant with the [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md) (CLS), the entire property must be marked as `<CLSCompliant(True)>`.</span></span> <span data-ttu-id="19880-105">適用する必要があります<xref:System.CLSCompliantAttribute>を[Property ステートメント](../../visual-basic/language-reference/statements/property-statement.md)ではなく、`Get`または`Set`ステートメントです。</span><span class="sxs-lookup"><span data-stu-id="19880-105">You must apply <xref:System.CLSCompliantAttribute> to the [Property Statement](../../visual-basic/language-reference/statements/property-statement.md), not to either the `Get` or the `Set` statement.</span></span>  
   
- <span data-ttu-id="3b535-106">プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定して、準拠または非準拠を示します。</span><span class="sxs-lookup"><span data-stu-id="3b535-106">When you apply <xref:System.CLSCompliantAttribute> to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="3b535-107">このパラメーターには既定値がありません。値を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="3b535-107">There is no default for this parameter, and you must supply a value.</span></span>  
+ <span data-ttu-id="19880-106">プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定して、準拠または非準拠を示します。</span><span class="sxs-lookup"><span data-stu-id="19880-106">When you apply <xref:System.CLSCompliantAttribute> to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="19880-107">このパラメーターには既定値がありません。値を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="19880-107">There is no default for this parameter, and you must supply a value.</span></span>  
   
- <span data-ttu-id="3b535-108">要素に <xref:System.CLSCompliantAttribute> を適用しないと、その要素は非準拠と見なされます。</span><span class="sxs-lookup"><span data-stu-id="3b535-108">If you do not apply <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
+ <span data-ttu-id="19880-108">要素に <xref:System.CLSCompliantAttribute> を適用しないと、その要素は非準拠と見なされます。</span><span class="sxs-lookup"><span data-stu-id="19880-108">If you do not apply <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
   
- <span data-ttu-id="3b535-109">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="3b535-109">By default, this message is a warning.</span></span> <span data-ttu-id="3b535-110">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="3b535-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="19880-109">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="19880-109">By default, this message is a warning.</span></span> <span data-ttu-id="19880-110">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="19880-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="3b535-111">**エラー ID:** BC40043</span><span class="sxs-lookup"><span data-stu-id="3b535-111">**Error ID:** BC40043</span></span>  
+ <span data-ttu-id="19880-111">**エラー ID:** BC40043</span><span class="sxs-lookup"><span data-stu-id="19880-111">**Error ID:** BC40043</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3b535-112">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="3b535-112">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="19880-112">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="19880-112">To correct this error</span></span>  
   
--   <span data-ttu-id="3b535-113"><xref:System.CLSCompliantAttribute> ステートメントまたは `Get` ステートメントから `Set` を削除します。</span><span class="sxs-lookup"><span data-stu-id="3b535-113">Remove <xref:System.CLSCompliantAttribute> from the `Get` or `Set` statement.</span></span>  
+-   <span data-ttu-id="19880-113"><xref:System.CLSCompliantAttribute> ステートメントまたは `Get` ステートメントから `Set` を削除します。</span><span class="sxs-lookup"><span data-stu-id="19880-113">Remove <xref:System.CLSCompliantAttribute> from the `Get` or `Set` statement.</span></span>  
   
--   <span data-ttu-id="3b535-114">このプロパティが CLS に準拠している必要がある場合は、 `Property` ステートメントを `<CLSCompliant(True)>`としてマークします。</span><span class="sxs-lookup"><span data-stu-id="3b535-114">If the property should be CLS-compliant, mark the `Property` statement as `<CLSCompliant(True)>`.</span></span>  
+-   <span data-ttu-id="19880-114">このプロパティが CLS に準拠している必要がある場合は、 `Property` ステートメントを `<CLSCompliant(True)>`としてマークします。</span><span class="sxs-lookup"><span data-stu-id="19880-114">If the property should be CLS-compliant, mark the `Property` statement as `<CLSCompliant(True)>`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3b535-115">関連項目</span><span class="sxs-lookup"><span data-stu-id="3b535-115">See Also</span></span>  
- [<span data-ttu-id="3b535-116">\<経由で PAVE > CLS 準拠コードの記述</span><span class="sxs-lookup"><span data-stu-id="3b535-116">\<PAVE OVER> Writing CLS-Compliant Code</span></span>](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)  
- [<span data-ttu-id="3b535-117">Get ステートメント</span><span class="sxs-lookup"><span data-stu-id="3b535-117">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)  
- [<span data-ttu-id="3b535-118">Set ステートメント</span><span class="sxs-lookup"><span data-stu-id="3b535-118">Set Statement</span></span>](../../visual-basic/language-reference/statements/set-statement.md)
+## <a name="see-also"></a><span data-ttu-id="19880-115">関連項目</span><span class="sxs-lookup"><span data-stu-id="19880-115">See Also</span></span>  
+ [<span data-ttu-id="19880-116">\<経由で PAVE > CLS 準拠コードの記述</span><span class="sxs-lookup"><span data-stu-id="19880-116">\<PAVE OVER> Writing CLS-Compliant Code</span></span>](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)  
+ [<span data-ttu-id="19880-117">Get ステートメント</span><span class="sxs-lookup"><span data-stu-id="19880-117">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)  
+ [<span data-ttu-id="19880-118">Set ステートメント</span><span class="sxs-lookup"><span data-stu-id="19880-118">Set Statement</span></span>](../../visual-basic/language-reference/statements/set-statement.md)
