--- a/docs/csharp/misc/cs3001.md
+++ b/docs/csharp/misc/cs3001.md
@@ -10,19 +10,19 @@ ms.assetid: c4f3e247-5e47-4182-b415-c573fb1a152f
 caps.latest.revision: "8"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 40d631c72c96bddd090fdae20830deaeab7f0531
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 2bec0c26e084c4c4d9a734e8116dcf5c2bb2120a
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-1-cs3001"></a><span data-ttu-id="2a19f-102">コンパイラの警告 (レベル 1) CS3001</span><span class="sxs-lookup"><span data-stu-id="2a19f-102">Compiler Warning (level 1) CS3001</span></span>
-<span data-ttu-id="2a19f-103">引数型 'type' は CLS に準拠していません</span><span class="sxs-lookup"><span data-stu-id="2a19f-103">Argument type 'type' is not CLS-compliant</span></span>  
+# <a name="compiler-warning-level-1-cs3001"></a><span data-ttu-id="bb041-102">コンパイラの警告 (レベル 1) CS3001</span><span class="sxs-lookup"><span data-stu-id="bb041-102">Compiler Warning (level 1) CS3001</span></span>
+<span data-ttu-id="bb041-103">引数型 'type' は CLS に準拠していません</span><span class="sxs-lookup"><span data-stu-id="bb041-103">Argument type 'type' is not CLS-compliant</span></span>  
   
- <span data-ttu-id="2a19f-104">A[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`メソッドの型が共通言語仕様 (CLS) に準拠しているパラメーターを受け入れる必要があります。</span><span class="sxs-lookup"><span data-stu-id="2a19f-104">A [public](../../csharp/language-reference/keywords/public.md), [protected](../../csharp/language-reference/keywords/protected.md), or `protected internal` method must accept a parameter whose type is compliant with the Common Language Specification (CLS).</span></span> <span data-ttu-id="2a19f-105">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="2a19f-105">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3).</span></span>  
+ <span data-ttu-id="bb041-104">A[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`メソッドの型が共通言語仕様 (CLS) に準拠しているパラメーターを受け入れる必要があります。</span><span class="sxs-lookup"><span data-stu-id="bb041-104">A [public](../../csharp/language-reference/keywords/public.md), [protected](../../csharp/language-reference/keywords/protected.md), or `protected internal` method must accept a parameter whose type is compliant with the Common Language Specification (CLS).</span></span> <span data-ttu-id="bb041-105">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="bb041-105">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="2a19f-106">例</span><span class="sxs-lookup"><span data-stu-id="2a19f-106">Example</span></span>  
- <span data-ttu-id="2a19f-107">次の例では、CS3001 エラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="2a19f-107">The following example generates CS3001:</span></span>  
+## <a name="example"></a><span data-ttu-id="bb041-106">例</span><span class="sxs-lookup"><span data-stu-id="bb041-106">Example</span></span>  
+ <span data-ttu-id="bb041-107">次の例では、CS3001 エラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="bb041-107">The following example generates CS3001:</span></span>  
   
 ```  
 // CS3001.cs  
