--- a/docs/csharp/misc/cs3004.md
+++ b/docs/csharp/misc/cs3004.md
@@ -10,13 +10,13 @@ ms.assetid: 84aa3b44-42b7-4d31-82b8-386e56f88129
 caps.latest.revision: "9"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 11e4f0e8fea73a601bda2f6b61c19a26193ec91b
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 59b00e08c7665b4bd76828ed62d3b9db0b7a9612
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-1-cs3004"></a><span data-ttu-id="9fc31-102">コンパイラの警告 (レベル 1) CS3004</span><span class="sxs-lookup"><span data-stu-id="9fc31-102">Compiler Warning (level 1) CS3004</span></span>
-<span data-ttu-id="9fc31-103">混合、分解された Unicode 文字は CLS に準拠していません。</span><span class="sxs-lookup"><span data-stu-id="9fc31-103">Mixed and decomposed Unicode characters are not CLS-compliant</span></span>  
+# <a name="compiler-warning-level-1-cs3004"></a><span data-ttu-id="5787e-102">コンパイラの警告 (レベル 1) CS3004</span><span class="sxs-lookup"><span data-stu-id="5787e-102">Compiler Warning (level 1) CS3004</span></span>
+<span data-ttu-id="5787e-103">混合、分解された Unicode 文字は CLS に準拠していません。</span><span class="sxs-lookup"><span data-stu-id="5787e-103">Mixed and decomposed Unicode characters are not CLS-compliant</span></span>  
   
- <span data-ttu-id="9fc31-104">のみで構成の UNICODE 文字は使用[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`共通言語仕様 (CLS) に準拠するために識別子。</span><span class="sxs-lookup"><span data-stu-id="9fc31-104">Only composed UNICODE characters are allowed in [public](../../csharp/language-reference/keywords/public.md), [protected](../../csharp/language-reference/keywords/protected.md), or `protected internal` identifiers in order to be compliant with the Common Language Specification (CLS).</span></span> <span data-ttu-id="9fc31-105">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="9fc31-105">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3).</span></span>
+ <span data-ttu-id="5787e-104">のみで構成の UNICODE 文字は使用[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`共通言語仕様 (CLS) に準拠するために識別子。</span><span class="sxs-lookup"><span data-stu-id="5787e-104">Only composed UNICODE characters are allowed in [public](../../csharp/language-reference/keywords/public.md), [protected](../../csharp/language-reference/keywords/protected.md), or `protected internal` identifiers in order to be compliant with the Common Language Specification (CLS).</span></span> <span data-ttu-id="5787e-105">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="5787e-105">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md).</span></span>
