--- a/docs/csharp/misc/cs3006.md
+++ b/docs/csharp/misc/cs3006.md
@@ -10,19 +10,19 @@ ms.assetid: efbfd898-e46f-4c3d-91e2-e2da0056b016
 caps.latest.revision: "8"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 7c7fc11b4094b98a6b74a112a6894dcabe106b09
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 6408f66a89411a7eca1db1ab6a3456f8cf9347af
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-1-cs3006"></a><span data-ttu-id="21b07-102">コンパイラの警告 (レベル 1) CS3006</span><span class="sxs-lookup"><span data-stu-id="21b07-102">Compiler Warning (level 1) CS3006</span></span>
-<span data-ttu-id="21b07-103">ref または out、または配列のランクのみが異なるオーバーロード メソッド 'method' は、CLS に準拠していません</span><span class="sxs-lookup"><span data-stu-id="21b07-103">Overloaded method 'method' differing only in ref or out, or in array rank, is not CLS-compliant</span></span>  
+# <a name="compiler-warning-level-1-cs3006"></a><span data-ttu-id="ed4d2-102">コンパイラの警告 (レベル 1) CS3006</span><span class="sxs-lookup"><span data-stu-id="ed4d2-102">Compiler Warning (level 1) CS3006</span></span>
+<span data-ttu-id="ed4d2-103">ref または out、または配列のランクのみが異なるオーバーロード メソッド 'method' は、CLS に準拠していません</span><span class="sxs-lookup"><span data-stu-id="ed4d2-103">Overloaded method 'method' differing only in ref or out, or in array rank, is not CLS-compliant</span></span>  
   
- <span data-ttu-id="21b07-104">[ref](../../csharp/language-reference/keywords/ref.md) または [out](../../csharp/language-reference/keywords/out.md) パラメーターに基づいてオーバーロードしたメソッドは、共通言語仕様 (CLS: Common Language Specification) に準拠できません。</span><span class="sxs-lookup"><span data-stu-id="21b07-104">A method does not cannot be overloaded based on the [ref](../../csharp/language-reference/keywords/ref.md) or [out](../../csharp/language-reference/keywords/out.md) parameter and still comply with the Common Language Specification (CLS).</span></span> <span data-ttu-id="21b07-105">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="21b07-105">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3).</span></span>  
+ <span data-ttu-id="ed4d2-104">[ref](../../csharp/language-reference/keywords/ref.md) または [out](../../csharp/language-reference/keywords/out.md) パラメーターに基づいてオーバーロードしたメソッドは、共通言語仕様 (CLS: Common Language Specification) に準拠できません。</span><span class="sxs-lookup"><span data-stu-id="ed4d2-104">A method does not cannot be overloaded based on the [ref](../../csharp/language-reference/keywords/ref.md) or [out](../../csharp/language-reference/keywords/out.md) parameter and still comply with the Common Language Specification (CLS).</span></span> <span data-ttu-id="ed4d2-105">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="ed4d2-105">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="21b07-106">例</span><span class="sxs-lookup"><span data-stu-id="21b07-106">Example</span></span>  
- <span data-ttu-id="21b07-107">次の例では、CS3006 エラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="21b07-107">The following example generates CS3006.</span></span> <span data-ttu-id="21b07-108">この警告を解決するには、アセンブリ レベルの属性をコメント アウトするか、またはメソッドの定義の 1 つを削除します。</span><span class="sxs-lookup"><span data-stu-id="21b07-108">To resolve this warning, comment out the assembly-level attribute or remove one of the method definitions.</span></span>  
+## <a name="example"></a><span data-ttu-id="ed4d2-106">例</span><span class="sxs-lookup"><span data-stu-id="ed4d2-106">Example</span></span>  
+ <span data-ttu-id="ed4d2-107">次の例では、CS3006 エラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="ed4d2-107">The following example generates CS3006.</span></span> <span data-ttu-id="ed4d2-108">この警告を解決するには、アセンブリ レベルの属性をコメント アウトするか、またはメソッドの定義の 1 つを削除します。</span><span class="sxs-lookup"><span data-stu-id="ed4d2-108">To resolve this warning, comment out the assembly-level attribute or remove one of the method definitions.</span></span>  
   
 ```  
 // CS3006.cs  
