--- a/docs/csharp/misc/cs3008.md
+++ b/docs/csharp/misc/cs3008.md
@@ -10,19 +10,19 @@ ms.assetid: 593f6114-bc7b-4789-958f-97bbf99c1c9f
 caps.latest.revision: "10"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: f41cec2dbb283ee5e1edcdc001e2c15a3e9e9006
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 7ebe4b1d364f3422e1d800e72c02eda405b1e0fb
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-1-cs3008"></a><span data-ttu-id="cde97-102">コンパイラの警告 (レベル 1) CS3008</span><span class="sxs-lookup"><span data-stu-id="cde97-102">Compiler Warning (level 1) CS3008</span></span>
-<span data-ttu-id="cde97-103">大文字、小文字の違いのみの識別子 'identifier' は CLS に準拠していません。</span><span class="sxs-lookup"><span data-stu-id="cde97-103">Identifier 'identifier' differing only in case is not CLS-compliant</span></span>  
+# <a name="compiler-warning-level-1-cs3008"></a><span data-ttu-id="803fe-102">コンパイラの警告 (レベル 1) CS3008</span><span class="sxs-lookup"><span data-stu-id="803fe-102">Compiler Warning (level 1) CS3008</span></span>
+<span data-ttu-id="803fe-103">大文字、小文字の違いのみの識別子 'identifier' は CLS に準拠していません。</span><span class="sxs-lookup"><span data-stu-id="803fe-103">Identifier 'identifier' differing only in case is not CLS-compliant</span></span>  
   
- <span data-ttu-id="cde97-104">A[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`識別子がアンダー スコア文字 (_) で始まる場合、共通言語仕様 (CLS) に対応を中断します。CLS 準拠の詳細については、次を参照してください。 [CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)と[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)です。</span><span class="sxs-lookup"><span data-stu-id="cde97-104">A [public](../../csharp/language-reference/keywords/public.md), [protected](../../csharp/language-reference/keywords/protected.md), or `protected internal` identifier breaks compliance with the Common Language Specification (CLS) if it begins with an underscore character (_).For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3).</span></span>  
+ <span data-ttu-id="803fe-104">A[パブリック](../../csharp/language-reference/keywords/public.md)、[保護](../../csharp/language-reference/keywords/protected.md)、または`protected internal`識別子がアンダー スコア文字で始まる場合、共通言語仕様 (CLS) に対応を中断 (\_)。</span><span class="sxs-lookup"><span data-stu-id="803fe-104">A [public](../../csharp/language-reference/keywords/public.md), [protected](../../csharp/language-reference/keywords/protected.md), or `protected internal` identifier breaks compliance with the Common Language Specification (CLS) if it begins with an underscore character (\_).</span></span> <span data-ttu-id="803fe-105">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="803fe-105">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="cde97-105">例</span><span class="sxs-lookup"><span data-stu-id="cde97-105">Example</span></span>  
- <span data-ttu-id="cde97-106">次の例では、CS3008 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="cde97-106">The following example generates CS3008:</span></span>  
+## <a name="example"></a><span data-ttu-id="803fe-106">例</span><span class="sxs-lookup"><span data-stu-id="803fe-106">Example</span></span>  
+ <span data-ttu-id="803fe-107">次の例では、CS3008 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="803fe-107">The following example generates CS3008:</span></span>  
   
 ```  
 // CS3008.cs  
