--- a/docs/csharp/misc/cs3011.md
+++ b/docs/csharp/misc/cs3011.md
@@ -10,19 +10,19 @@ ms.assetid: e27ce521-0147-488b-b4a1-1b6fb5168661
 caps.latest.revision: "11"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: d288816aa68dac2b7aede292f5bae2a56c02393b
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: d8676d5eb08c1322c9000e5a5eadaf3d51924b3f
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-1-cs3011"></a><span data-ttu-id="cb07e-102">コンパイラの警告 (レベル 1) CS3011</span><span class="sxs-lookup"><span data-stu-id="cb07e-102">Compiler Warning (level 1) CS3011</span></span>
-<span data-ttu-id="cb07e-103">'member': 抽象化できるのは CLS 準拠メンバーのみです</span><span class="sxs-lookup"><span data-stu-id="cb07e-103">'member': only CLS-compliant members can be abstract</span></span>  
+# <a name="compiler-warning-level-1-cs3011"></a><span data-ttu-id="840e4-102">コンパイラの警告 (レベル 1) CS3011</span><span class="sxs-lookup"><span data-stu-id="840e4-102">Compiler Warning (level 1) CS3011</span></span>
+<span data-ttu-id="840e4-103">'member': 抽象化できるのは CLS 準拠メンバーのみです</span><span class="sxs-lookup"><span data-stu-id="840e4-103">'member': only CLS-compliant members can be abstract</span></span>  
   
- <span data-ttu-id="cb07e-104">クラス メンバーに [抽象](../../csharp/language-reference/keywords/abstract.md) と共通言語仕様 (CLS) 非準拠の両方を指定することはできません。</span><span class="sxs-lookup"><span data-stu-id="cb07e-104">A class member cannot be both [abstract](../../csharp/language-reference/keywords/abstract.md) and non-compliant with the Common Language Specification (CLS).</span></span> <span data-ttu-id="cb07e-105">CLS では、すべてのクラス メンバーが実装されるように指定します。</span><span class="sxs-lookup"><span data-stu-id="cb07e-105">The CLS specifies that all class members shall be implemented.</span></span> <span data-ttu-id="cb07e-106">CLS 準拠の詳細については、次を参照してください。 [CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)と[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)です。</span><span class="sxs-lookup"><span data-stu-id="cb07e-106">For more information about CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3).</span></span>  
+ <span data-ttu-id="840e4-104">クラス メンバーに [抽象](../../csharp/language-reference/keywords/abstract.md) と共通言語仕様 (CLS) 非準拠の両方を指定することはできません。</span><span class="sxs-lookup"><span data-stu-id="840e4-104">A class member cannot be both [abstract](../../csharp/language-reference/keywords/abstract.md) and non-compliant with the Common Language Specification (CLS).</span></span> <span data-ttu-id="840e4-105">CLS では、すべてのクラス メンバーが実装されるように指定します。</span><span class="sxs-lookup"><span data-stu-id="840e4-105">The CLS specifies that all class members shall be implemented.</span></span> <span data-ttu-id="840e4-106">CLS 準拠の詳細については、次を参照してください。 [CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)と[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)です。</span><span class="sxs-lookup"><span data-stu-id="840e4-106">For more information about CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="cb07e-107">例</span><span class="sxs-lookup"><span data-stu-id="cb07e-107">Example</span></span>  
- <span data-ttu-id="cb07e-108">次の例では、CS3011 エラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="cb07e-108">The following example generates CS3011:</span></span>  
+## <a name="example"></a><span data-ttu-id="840e4-107">例</span><span class="sxs-lookup"><span data-stu-id="840e4-107">Example</span></span>  
+ <span data-ttu-id="840e4-108">次の例では、CS3011 エラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="840e4-108">The following example generates CS3011:</span></span>  
   
 ```  
 // CS3011.cs  
