--- a/docs/csharp/misc/cs3012.md
+++ b/docs/csharp/misc/cs3012.md
@@ -10,19 +10,19 @@ ms.assetid: 1f7555b4-61e4-4821-85c9-586301df4c5c
 caps.latest.revision: "11"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 1f8526f5967a205fe04c96b034b030d3c77ff6e0
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 6c0b777e55584790dc89ed02530f4b5a42167940
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-1-cs3012"></a><span data-ttu-id="95c68-102">コンパイラの警告 (レベル 1) CS3012</span><span class="sxs-lookup"><span data-stu-id="95c68-102">Compiler Warning (level 1) CS3012</span></span>
-<span data-ttu-id="95c68-103">アセンブリの CLSCompliant 属性と異なるモジュールの CLSCompliant 属性は指定できません</span><span class="sxs-lookup"><span data-stu-id="95c68-103">You cannot specify the CLSCompliant attribute on a module that differs from the CLSCompliant attribute on the assembly</span></span>  
+# <a name="compiler-warning-level-1-cs3012"></a><span data-ttu-id="f34a5-102">コンパイラの警告 (レベル 1) CS3012</span><span class="sxs-lookup"><span data-stu-id="f34a5-102">Compiler Warning (level 1) CS3012</span></span>
+<span data-ttu-id="f34a5-103">アセンブリの CLSCompliant 属性と異なるモジュールの CLSCompliant 属性は指定できません</span><span class="sxs-lookup"><span data-stu-id="f34a5-103">You cannot specify the CLSCompliant attribute on a module that differs from the CLSCompliant attribute on the assembly</span></span>  
   
- <span data-ttu-id="95c68-104">`[module:System.CLCSompliant(true)]`を通じて、モジュールが共通言語仕様 (CLS) に準拠するためには、 [/target:module](../../csharp/language-reference/compiler-options/target-module-compiler-option.md) コンパイラ オプションを使用してビルドする必要があります。</span><span class="sxs-lookup"><span data-stu-id="95c68-104">In order for a module to be compliant with the Common Language Specification (CLS) through `[module:System.CLCSompliant(true)]`, it must be built with the [/target:module](../../csharp/language-reference/compiler-options/target-module-compiler-option.md) compiler option.</span></span> <span data-ttu-id="95c68-105">CLS の詳細については、次を参照してください。[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)です。</span><span class="sxs-lookup"><span data-stu-id="95c68-105">For more information on the CLS, see [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3).</span></span>  
+ <span data-ttu-id="f34a5-104">`[module:System.CLCSompliant(true)]`を通じて、モジュールが共通言語仕様 (CLS) に準拠するためには、 [/target:module](../../csharp/language-reference/compiler-options/target-module-compiler-option.md) コンパイラ オプションを使用してビルドする必要があります。</span><span class="sxs-lookup"><span data-stu-id="f34a5-104">In order for a module to be compliant with the Common Language Specification (CLS) through `[module:System.CLCSompliant(true)]`, it must be built with the [/target:module](../../csharp/language-reference/compiler-options/target-module-compiler-option.md) compiler option.</span></span> <span data-ttu-id="f34a5-105">CLS の詳細については、次を参照してください。[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)です。</span><span class="sxs-lookup"><span data-stu-id="f34a5-105">For more information on the CLS, see [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="95c68-106">例</span><span class="sxs-lookup"><span data-stu-id="95c68-106">Example</span></span>  
- <span data-ttu-id="95c68-107">次の例では、 `/target:module`を使用せずにビルドすると CS3012 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="95c68-107">The following example, when built without `/target:module`, generates CS3012:</span></span>  
+## <a name="example"></a><span data-ttu-id="f34a5-106">例</span><span class="sxs-lookup"><span data-stu-id="f34a5-106">Example</span></span>  
+ <span data-ttu-id="f34a5-107">次の例では、 `/target:module`を使用せずにビルドすると CS3012 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="f34a5-107">The following example, when built without `/target:module`, generates CS3012:</span></span>  
   
 ```  
 // CS3012.cs  
