--- a/docs/csharp/misc/cs3013.md
+++ b/docs/csharp/misc/cs3013.md
@@ -10,15 +10,15 @@ ms.assetid: 00b3bbe1-f2a0-465c-be0e-1af700c5753d
 caps.latest.revision: "9"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 0e7f4eb5e1570ca7caebfe2b8813964cf2cb8a8b
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 2ff2cbc30226bdcbc9b65ecfb8cdb274894ba33e
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-1-cs3013"></a><span data-ttu-id="c1704-102">コンパイラの警告 (レベル 1) CS3013</span><span class="sxs-lookup"><span data-stu-id="c1704-102">Compiler Warning (level 1) CS3013</span></span>
-<span data-ttu-id="c1704-103">追加されたモジュールは、アセンブリに一致するように CLSCompliant 属性と共に設定されなければなりません</span><span class="sxs-lookup"><span data-stu-id="c1704-103">Added modules must be marked with the CLSCompliant attribute to match the assembly</span></span>  
+# <a name="compiler-warning-level-1-cs3013"></a><span data-ttu-id="0d78a-102">コンパイラの警告 (レベル 1) CS3013</span><span class="sxs-lookup"><span data-stu-id="0d78a-102">Compiler Warning (level 1) CS3013</span></span>
+<span data-ttu-id="0d78a-103">追加されたモジュールは、アセンブリに一致するように CLSCompliant 属性と共に設定されなければなりません</span><span class="sxs-lookup"><span data-stu-id="0d78a-103">Added modules must be marked with the CLSCompliant attribute to match the assembly</span></span>  
   
- <span data-ttu-id="c1704-104">[/target:module](../../csharp/language-reference/compiler-options/target-module-compiler-option.md) コンパイラ オプションを使用してコンパイルされたモジュールが、 [/addmodule](../../csharp/language-reference/compiler-options/addmodule-compiler-option.md)を使用してコンパイルに追加されました。</span><span class="sxs-lookup"><span data-stu-id="c1704-104">A module that was compiled with the [/target:module](../../csharp/language-reference/compiler-options/target-module-compiler-option.md) compiler option was added to a compilation with [/addmodule](../../csharp/language-reference/compiler-options/addmodule-compiler-option.md).</span></span> <span data-ttu-id="c1704-105">ただし、このモジュールの共通言語仕様 (CLS) への準拠が、現在のコンパイルの CLS 状態と一致しません。</span><span class="sxs-lookup"><span data-stu-id="c1704-105">However, the module's compliance with the Common Language Specification (CLS) does not agree with the CLS state of the current compilation.</span></span>  
+ <span data-ttu-id="0d78a-104">[/target:module](../../csharp/language-reference/compiler-options/target-module-compiler-option.md) コンパイラ オプションを使用してコンパイルされたモジュールが、 [/addmodule](../../csharp/language-reference/compiler-options/addmodule-compiler-option.md)を使用してコンパイルに追加されました。</span><span class="sxs-lookup"><span data-stu-id="0d78a-104">A module that was compiled with the [/target:module](../../csharp/language-reference/compiler-options/target-module-compiler-option.md) compiler option was added to a compilation with [/addmodule](../../csharp/language-reference/compiler-options/addmodule-compiler-option.md).</span></span> <span data-ttu-id="0d78a-105">ただし、このモジュールの共通言語仕様 (CLS) への準拠が、現在のコンパイルの CLS 状態と一致しません。</span><span class="sxs-lookup"><span data-stu-id="0d78a-105">However, the module's compliance with the Common Language Specification (CLS) does not agree with the CLS state of the current compilation.</span></span>  
   
- <span data-ttu-id="c1704-106">CLS 準拠は、モジュール属性で示されます。</span><span class="sxs-lookup"><span data-stu-id="c1704-106">CLS compliance is indicated with the module attribute.</span></span> <span data-ttu-id="c1704-107">たとえば、 `[module:CLSCompliant(true)]` は、モジュールが CLS に準拠していることを示し、 `[module:CLSCompliant(false)]` は、モジュールが CLS に準拠していないことを示します。</span><span class="sxs-lookup"><span data-stu-id="c1704-107">For example, `[module:CLSCompliant(true)]` indicates that the module is CLS compliant, and `[module:CLSCompliant(false)]` indicates that the module is not CLS compliant.</span></span> <span data-ttu-id="c1704-108">既定値は、`[module:CLSCompliant(false)]` です。</span><span class="sxs-lookup"><span data-stu-id="c1704-108">The default is `[module:CLSCompliant(false)]`.</span></span> <span data-ttu-id="c1704-109">CLS の詳細については、次を参照してください。[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)です。</span><span class="sxs-lookup"><span data-stu-id="c1704-109">For more information on the CLS, see [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3).</span></span>
+ <span data-ttu-id="0d78a-106">CLS 準拠は、モジュール属性で示されます。</span><span class="sxs-lookup"><span data-stu-id="0d78a-106">CLS compliance is indicated with the module attribute.</span></span> <span data-ttu-id="0d78a-107">たとえば、 `[module:CLSCompliant(true)]` は、モジュールが CLS に準拠していることを示し、 `[module:CLSCompliant(false)]` は、モジュールが CLS に準拠していないことを示します。</span><span class="sxs-lookup"><span data-stu-id="0d78a-107">For example, `[module:CLSCompliant(true)]` indicates that the module is CLS compliant, and `[module:CLSCompliant(false)]` indicates that the module is not CLS compliant.</span></span> <span data-ttu-id="0d78a-108">既定値は、`[module:CLSCompliant(false)]` です。</span><span class="sxs-lookup"><span data-stu-id="0d78a-108">The default is `[module:CLSCompliant(false)]`.</span></span> <span data-ttu-id="0d78a-109">CLS の詳細については、次を参照してください。[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)です。</span><span class="sxs-lookup"><span data-stu-id="0d78a-109">For more information on the CLS, see [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md).</span></span>
