--- a/docs/csharp/misc/cs3015.md
+++ b/docs/csharp/misc/cs3015.md
@@ -10,19 +10,19 @@ ms.assetid: 58182215-0c2f-4497-8baf-ffb29f18d6c7
 caps.latest.revision: "9"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: f4cce8e3b3095fd6d8b5d691ccb58f5e585b6dd2
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 6bd903929061704a3aa06311aafe69aeab5fea8c
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-1-cs3015"></a><span data-ttu-id="07cdd-102">コンパイラの警告 (レベル 1) CS3015</span><span class="sxs-lookup"><span data-stu-id="07cdd-102">Compiler Warning (level 1) CS3015</span></span>
-<span data-ttu-id="07cdd-103">'method signature' には、CLS 準拠型のみを使用する、アクセス可能なコンストラクターがありません</span><span class="sxs-lookup"><span data-stu-id="07cdd-103">'method signature' has no accessible constructors which use only CLS-compliant types</span></span>  
+# <a name="compiler-warning-level-1-cs3015"></a><span data-ttu-id="d816a-102">コンパイラの警告 (レベル 1) CS3015</span><span class="sxs-lookup"><span data-stu-id="d816a-102">Compiler Warning (level 1) CS3015</span></span>
+<span data-ttu-id="d816a-103">'method signature' には、CLS 準拠型のみを使用する、アクセス可能なコンストラクターがありません</span><span class="sxs-lookup"><span data-stu-id="d816a-103">'method signature' has no accessible constructors which use only CLS-compliant types</span></span>  
   
- <span data-ttu-id="07cdd-104">共通言語仕様 (CLS: Common Language Specification) に準拠するためには、属性クラスの引数リストに配列を含めることはできません。</span><span class="sxs-lookup"><span data-stu-id="07cdd-104">To be compliant with the Common Language Specification (CLS), the argument list of an attribute class cannot contain an array.</span></span> <span data-ttu-id="07cdd-105">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="07cdd-105">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3).</span></span>  
+ <span data-ttu-id="d816a-104">共通言語仕様 (CLS: Common Language Specification) に準拠するためには、属性クラスの引数リストに配列を含めることはできません。</span><span class="sxs-lookup"><span data-stu-id="d816a-104">To be compliant with the Common Language Specification (CLS), the argument list of an attribute class cannot contain an array.</span></span> <span data-ttu-id="d816a-105">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="d816a-105">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="07cdd-106">例</span><span class="sxs-lookup"><span data-stu-id="07cdd-106">Example</span></span>  
- <span data-ttu-id="07cdd-107">次の例では C3015 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="07cdd-107">The following sample generates C3015.</span></span>  
+## <a name="example"></a><span data-ttu-id="d816a-106">例</span><span class="sxs-lookup"><span data-stu-id="d816a-106">Example</span></span>  
+ <span data-ttu-id="d816a-107">次の例では C3015 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="d816a-107">The following sample generates C3015.</span></span>  
   
 ```  
 // CS3015.cs  
