--- a/docs/csharp/misc/cs3016.md
+++ b/docs/csharp/misc/cs3016.md
@@ -10,19 +10,19 @@ ms.assetid: b2ae721d-13ab-4e9d-a288-741d7825defe
 caps.latest.revision: "9"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: bf8a8cc8891c43295aae78a34590b2c808f81ebb
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: addc0b8383b3853ae42c0286dfd7153b688e0342
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-1-cs3016"></a><span data-ttu-id="1c1ee-102">コンパイラの警告 (レベル 1) CS3016</span><span class="sxs-lookup"><span data-stu-id="1c1ee-102">Compiler Warning (level 1) CS3016</span></span>
-<span data-ttu-id="1c1ee-103">属性の引数としての配列は CLS 準拠ではありません</span><span class="sxs-lookup"><span data-stu-id="1c1ee-103">Arrays as attribute arguments is not CLS-compliant</span></span>  
+# <a name="compiler-warning-level-1-cs3016"></a><span data-ttu-id="b69ae-102">コンパイラの警告 (レベル 1) CS3016</span><span class="sxs-lookup"><span data-stu-id="b69ae-102">Compiler Warning (level 1) CS3016</span></span>
+<span data-ttu-id="b69ae-103">属性の引数としての配列は CLS 準拠ではありません</span><span class="sxs-lookup"><span data-stu-id="b69ae-103">Arrays as attribute arguments is not CLS-compliant</span></span>  
   
- <span data-ttu-id="1c1ee-104">属性に配列を渡すことは、共通言語仕様 (CLS) に準拠していません。</span><span class="sxs-lookup"><span data-stu-id="1c1ee-104">It is not compliant with the Common Language Specification (CLS) to pass an array to an attribute.</span></span> <span data-ttu-id="1c1ee-105">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="1c1ee-105">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3).</span></span>  
+ <span data-ttu-id="b69ae-104">属性に配列を渡すことは、共通言語仕様 (CLS) に準拠していません。</span><span class="sxs-lookup"><span data-stu-id="b69ae-104">It is not compliant with the Common Language Specification (CLS) to pass an array to an attribute.</span></span> <span data-ttu-id="b69ae-105">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="b69ae-105">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="1c1ee-106">例</span><span class="sxs-lookup"><span data-stu-id="1c1ee-106">Example</span></span>  
- <span data-ttu-id="1c1ee-107">次の例では CS3016 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="1c1ee-107">The following example generates CS3016:</span></span>  
+## <a name="example"></a><span data-ttu-id="b69ae-106">例</span><span class="sxs-lookup"><span data-stu-id="b69ae-106">Example</span></span>  
+ <span data-ttu-id="b69ae-107">次の例では CS3016 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="b69ae-107">The following example generates CS3016:</span></span>  
   
 ```  
 // CS3016.cs  
