--- a/docs/csharp/misc/cs3017.md
+++ b/docs/csharp/misc/cs3017.md
@@ -10,19 +10,19 @@ ms.assetid: 8e56b2f0-9caf-4c9a-98c2-d3ad0b70e767
 caps.latest.revision: "8"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: c63bcfbc15555dc8e02063bcdd1be7a7c50a3d1a
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 13127de7f7e6e3994956ac3993d6d27e375c7328
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-1-cs3017"></a><span data-ttu-id="b5602-102">コンパイラの警告 (レベル 1) CS3017</span><span class="sxs-lookup"><span data-stu-id="b5602-102">Compiler Warning (level 1) CS3017</span></span>
-<span data-ttu-id="b5602-103">アセンブリの CLSCompliant 属性と異なるモジュールの CLSCompliant 属性は指定できません</span><span class="sxs-lookup"><span data-stu-id="b5602-103">You cannot specify the CLSCompliant attribute on a module that differs from the CLSCompliant attribute on the assembly</span></span>  
+# <a name="compiler-warning-level-1-cs3017"></a><span data-ttu-id="95d3d-102">コンパイラの警告 (レベル 1) CS3017</span><span class="sxs-lookup"><span data-stu-id="95d3d-102">Compiler Warning (level 1) CS3017</span></span>
+<span data-ttu-id="95d3d-103">アセンブリの CLSCompliant 属性と異なるモジュールの CLSCompliant 属性は指定できません</span><span class="sxs-lookup"><span data-stu-id="95d3d-103">You cannot specify the CLSCompliant attribute on a module that differs from the CLSCompliant attribute on the assembly</span></span>  
   
- <span data-ttu-id="b5602-104">モジュールの CLSCompliant 属性と矛盾するアセンブリの CLSCompliant 属性があると、この警告が発生します。</span><span class="sxs-lookup"><span data-stu-id="b5602-104">This warning occurs if you have a assembly CLSCompliant attribute that conflicts with a module CLSCompliant attribute.</span></span> <span data-ttu-id="b5602-105">CLS 準拠であるアセンブリには、CLS 準拠でないモジュールを含めることができません。</span><span class="sxs-lookup"><span data-stu-id="b5602-105">An assembly that is CLS compliant cannot contain modules that are not CLS compliant.</span></span> <span data-ttu-id="b5602-106">この警告を解決するには、アセンブリとモジュールの CLSCompliant 属性を両方 true、または両方 false のどちらかにするか、片方の属性を削除してください。</span><span class="sxs-lookup"><span data-stu-id="b5602-106">To resolve this warning, make sure the assembly and module CLSCompliant attributes are either both true or both false, or remove one of the attributes.</span></span> <span data-ttu-id="b5602-107">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="b5602-107">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3).</span></span>  
+ <span data-ttu-id="95d3d-104">モジュールの CLSCompliant 属性と矛盾するアセンブリの CLSCompliant 属性があると、この警告が発生します。</span><span class="sxs-lookup"><span data-stu-id="95d3d-104">This warning occurs if you have a assembly CLSCompliant attribute that conflicts with a module CLSCompliant attribute.</span></span> <span data-ttu-id="95d3d-105">CLS 準拠であるアセンブリには、CLS 準拠でないモジュールを含めることができません。</span><span class="sxs-lookup"><span data-stu-id="95d3d-105">An assembly that is CLS compliant cannot contain modules that are not CLS compliant.</span></span> <span data-ttu-id="95d3d-106">この警告を解決するには、アセンブリとモジュールの CLSCompliant 属性を両方 true、または両方 false のどちらかにするか、片方の属性を削除してください。</span><span class="sxs-lookup"><span data-stu-id="95d3d-106">To resolve this warning, make sure the assembly and module CLSCompliant attributes are either both true or both false, or remove one of the attributes.</span></span> <span data-ttu-id="95d3d-107">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="95d3d-107">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="b5602-108">例</span><span class="sxs-lookup"><span data-stu-id="b5602-108">Example</span></span>  
- <span data-ttu-id="b5602-109">次の例では、CS3017 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="b5602-109">The following example generates CS3017:</span></span>  
+## <a name="example"></a><span data-ttu-id="95d3d-108">例</span><span class="sxs-lookup"><span data-stu-id="95d3d-108">Example</span></span>  
+ <span data-ttu-id="95d3d-109">次の例では、CS3017 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="95d3d-109">The following example generates CS3017:</span></span>  
   
 ```  
 // CS3017.cs  
