--- a/docs/csharp/misc/cs3018.md
+++ b/docs/csharp/misc/cs3018.md
@@ -10,19 +10,19 @@ ms.assetid: 35d2f4bd-10c3-4e9f-8e02-389ab84db2cd
 caps.latest.revision: "11"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 88e891af2ffbe76db16fbfb83d3ddf9a9a457e0d
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 9cb09c412ac2a232409119071def099d79b20ad9
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-1-cs3018"></a><span data-ttu-id="5ab6f-102">コンパイラの警告 (レベル 1) CS3018</span><span class="sxs-lookup"><span data-stu-id="5ab6f-102">Compiler Warning (level 1) CS3018</span></span>
-<span data-ttu-id="5ab6f-103">CLS に準拠していない型 'type' のメンバーであるため、'type' を CLS 準拠として設定できません</span><span class="sxs-lookup"><span data-stu-id="5ab6f-103">'type' cannot be marked as CLS-Compliant because it is a member of non CLS-compliant type 'type'</span></span>  
+# <a name="compiler-warning-level-1-cs3018"></a><span data-ttu-id="647ff-102">コンパイラの警告 (レベル 1) CS3018</span><span class="sxs-lookup"><span data-stu-id="647ff-102">Compiler Warning (level 1) CS3018</span></span>
+<span data-ttu-id="647ff-103">CLS に準拠していない型 'type' のメンバーであるため、'type' を CLS 準拠として設定できません</span><span class="sxs-lookup"><span data-stu-id="647ff-103">'type' cannot be marked as CLS-Compliant because it is a member of non CLS-compliant type 'type'</span></span>  
   
- <span data-ttu-id="5ab6f-104">この警告は、CLSCompliant 属性が `true` に設定された入れ子のクラスが、CLSCompliant 属性が `false`に設定されたクラスのメンバーとして宣言されている場合に発生します。</span><span class="sxs-lookup"><span data-stu-id="5ab6f-104">This warning occurs if a nested class with the CLSCompliant attribute set to `true` is declared as a member of a class declared with the CLSCompliant attribute set to `false`.</span></span> <span data-ttu-id="5ab6f-105">CLS 準拠ではない外部クラスのメンバーである場合、入れ子になったクラスを CLS 準拠にすることはできないため、このような記述は使用できません。</span><span class="sxs-lookup"><span data-stu-id="5ab6f-105">This is not allowed, since a nested class cannot be CLS-compliant if it is a member of an outer class that is not CLS-compliant.</span></span> <span data-ttu-id="5ab6f-106">この警告を解決するには、入れ子になったクラスから CLSCompliant 属性を削除するか、属性の設定を `true` から `false`に変更します。</span><span class="sxs-lookup"><span data-stu-id="5ab6f-106">To resolve this warning, remove the CLSCompliant attribute from the nested class, or change it from `true` to `false`.</span></span> <span data-ttu-id="5ab6f-107">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="5ab6f-107">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3).</span></span>  
+ <span data-ttu-id="647ff-104">この警告は、CLSCompliant 属性が `true` に設定された入れ子のクラスが、CLSCompliant 属性が `false`に設定されたクラスのメンバーとして宣言されている場合に発生します。</span><span class="sxs-lookup"><span data-stu-id="647ff-104">This warning occurs if a nested class with the CLSCompliant attribute set to `true` is declared as a member of a class declared with the CLSCompliant attribute set to `false`.</span></span> <span data-ttu-id="647ff-105">CLS 準拠ではない外部クラスのメンバーである場合、入れ子になったクラスを CLS 準拠にすることはできないため、このような記述は使用できません。</span><span class="sxs-lookup"><span data-stu-id="647ff-105">This is not allowed, since a nested class cannot be CLS-compliant if it is a member of an outer class that is not CLS-compliant.</span></span> <span data-ttu-id="647ff-106">この警告を解決するには、入れ子になったクラスから CLSCompliant 属性を削除するか、属性の設定を `true` から `false`に変更します。</span><span class="sxs-lookup"><span data-stu-id="647ff-106">To resolve this warning, remove the CLSCompliant attribute from the nested class, or change it from `true` to `false`.</span></span> <span data-ttu-id="647ff-107">CLS 準拠について詳しくは、「[CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」および「[言語への非依存性、および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="647ff-107">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="5ab6f-108">例</span><span class="sxs-lookup"><span data-stu-id="5ab6f-108">Example</span></span>  
- <span data-ttu-id="5ab6f-109">次の例では CS3018 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="5ab6f-109">The following sample generates CS3018.</span></span>  
+## <a name="example"></a><span data-ttu-id="647ff-108">例</span><span class="sxs-lookup"><span data-stu-id="647ff-108">Example</span></span>  
+ <span data-ttu-id="647ff-109">次の例では CS3018 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="647ff-109">The following sample generates CS3018.</span></span>  
   
 ```  
 // CS3018.cs  
