--- a/docs/csharp/misc/cs3019.md
+++ b/docs/csharp/misc/cs3019.md
@@ -10,19 +10,19 @@ ms.assetid: b41117cf-8956-4989-93fd-9903812e2d2f
 caps.latest.revision: "9"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 68a0853afb18c26ffceb82cc6c59acbf7473103a
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 7bc975ccaaf7f89b7a9963edb22d82f67bba3aff
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-2-cs3019"></a><span data-ttu-id="781e3-102">コンパイラの警告 (レベル 2) CS3019</span><span class="sxs-lookup"><span data-stu-id="781e3-102">Compiler Warning (level 2) CS3019</span></span>
-<span data-ttu-id="781e3-103">'type' はこのアセンブリの外から認識できないため、'type' で CLS 準拠の確認は実行されません</span><span class="sxs-lookup"><span data-stu-id="781e3-103">CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.</span></span>  
+# <a name="compiler-warning-level-2-cs3019"></a><span data-ttu-id="a8bb9-102">コンパイラの警告 (レベル 2) CS3019</span><span class="sxs-lookup"><span data-stu-id="a8bb9-102">Compiler Warning (level 2) CS3019</span></span>
+<span data-ttu-id="a8bb9-103">'type' はこのアセンブリの外から認識できないため、'type' で CLS 準拠の確認は実行されません</span><span class="sxs-lookup"><span data-stu-id="a8bb9-103">CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.</span></span>  
   
- <span data-ttu-id="781e3-104">この警告は、 <xref:System.CLSCompliantAttribute> 属性を持つ型またはメンバーが別のアセンブリからは見えない場合に発生します。</span><span class="sxs-lookup"><span data-stu-id="781e3-104">This warning occurs when a type or a member that has the <xref:System.CLSCompliantAttribute> attribute is not visible from another assembly.</span></span> <span data-ttu-id="781e3-105">このエラーを解決するには、他のアセンブリから見えないクラスまたはメンバーの属性を削除するか、型またはメンバーが見えるようにします。</span><span class="sxs-lookup"><span data-stu-id="781e3-105">To resolve this error, remove the attribute on any classes or members that are not visible from the other assembly, or make the type or members visible.</span></span> <span data-ttu-id="781e3-106">CLS 準拠の詳細については、次を参照してください。 [ \<PAVE OVER > CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)です。</span><span class="sxs-lookup"><span data-stu-id="781e3-106">For more information on CLS Compliance, see [\<PAVE OVER> Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3).</span></span>  
+ <span data-ttu-id="a8bb9-104">この警告は、 <xref:System.CLSCompliantAttribute> 属性を持つ型またはメンバーが別のアセンブリからは見えない場合に発生します。</span><span class="sxs-lookup"><span data-stu-id="a8bb9-104">This warning occurs when a type or a member that has the <xref:System.CLSCompliantAttribute> attribute is not visible from another assembly.</span></span> <span data-ttu-id="a8bb9-105">このエラーを解決するには、他のアセンブリから見えないクラスまたはメンバーの属性を削除するか、型またはメンバーが見えるようにします。</span><span class="sxs-lookup"><span data-stu-id="a8bb9-105">To resolve this error, remove the attribute on any classes or members that are not visible from the other assembly, or make the type or members visible.</span></span> <span data-ttu-id="a8bb9-106">CLS 準拠の詳細については、次を参照してください。 [ \<PAVE OVER > CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)です。</span><span class="sxs-lookup"><span data-stu-id="a8bb9-106">For more information on CLS Compliance, see [\<PAVE OVER> Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="781e3-107">例</span><span class="sxs-lookup"><span data-stu-id="781e3-107">Example</span></span>  
- <span data-ttu-id="781e3-108">次の例では CS3019 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="781e3-108">The following sample generates CS3019:</span></span>  
+## <a name="example"></a><span data-ttu-id="a8bb9-107">例</span><span class="sxs-lookup"><span data-stu-id="a8bb9-107">Example</span></span>  
+ <span data-ttu-id="a8bb9-108">次の例では CS3019 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="a8bb9-108">The following sample generates CS3019:</span></span>  
   
 ```  
 // CS3019.cs  
@@ -47,5 +47,5 @@ class C
 }  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="781e3-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="781e3-109">See Also</span></span>  
- [<span data-ttu-id="781e3-110">言語への非依存性、および言語非依存コンポーネント</span><span class="sxs-lookup"><span data-stu-id="781e3-110">Language Independence and Language-Independent Components</span></span>](https://msdn.microsoft.com/library/12a7a7h3)
+## <a name="see-also"></a><span data-ttu-id="a8bb9-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="a8bb9-109">See Also</span></span>  
+ [<span data-ttu-id="a8bb9-110">言語への非依存性、および言語非依存コンポーネント</span><span class="sxs-lookup"><span data-stu-id="a8bb9-110">Language Independence and Language-Independent Components</span></span>](../../../docs/standard/language-independence-and-language-independent-components.md)
