--- a/docs/csharp/misc/cs3021.md
+++ b/docs/csharp/misc/cs3021.md
@@ -10,21 +10,21 @@ ms.assetid: 89f09e4d-65b0-4422-86ea-85c7e05ac29b
 caps.latest.revision: "8"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: ba34fed8f972d341d11704c945833ede65cb6e5a
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 464c7add48f26ba7dadf25a9a966db4a4f815f2e
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="compiler-warning-level-2-cs3021"></a><span data-ttu-id="bc17b-102">コンパイラの警告 (レベル 2) CS3021</span><span class="sxs-lookup"><span data-stu-id="bc17b-102">Compiler Warning (level 2) CS3021</span></span>
-<span data-ttu-id="bc17b-103">アセンブリに CLSCompliant 属性が含まれていないため、'type' には CLSCompliant 属性が必要ありません</span><span class="sxs-lookup"><span data-stu-id="bc17b-103">'type' does not need a CLSCompliant attribute because the assembly does not have a CLSCompliant attribute</span></span>  
+# <a name="compiler-warning-level-2-cs3021"></a><span data-ttu-id="a855b-102">コンパイラの警告 (レベル 2) CS3021</span><span class="sxs-lookup"><span data-stu-id="a855b-102">Compiler Warning (level 2) CS3021</span></span>
+<span data-ttu-id="a855b-103">アセンブリに CLSCompliant 属性が含まれていないため、'type' には CLSCompliant 属性が必要ありません</span><span class="sxs-lookup"><span data-stu-id="a855b-103">'type' does not need a CLSCompliant attribute because the assembly does not have a CLSCompliant attribute</span></span>  
   
- <span data-ttu-id="bc17b-104">この警告が発生`[CLSCompliant(false)]`を true に、アセンブリ レベル CLSCompliant 属性が設定されていないアセンブリ内のクラスに表示されます (つまり、行`[assembly: CLSCompliant(true)]`)。</span><span class="sxs-lookup"><span data-stu-id="bc17b-104">This warning occurs if `[CLSCompliant(false)]` appears on a class in an assembly which does not have an assembly-level CLSCompliant attribute set to true (that is, the line `[assembly: CLSCompliant(true)]`).</span></span> <span data-ttu-id="bc17b-105">アセンブリは自らを CLS 準拠と宣言していないため、非準拠であると見なされます。そのため、アセンブリ内では非準拠を宣言する必要はありません。</span><span class="sxs-lookup"><span data-stu-id="bc17b-105">Since the assembly is not declaring itself CLS compliant, there is no need for anything within the assembly to declare itself non-compliant, since it is assumed to be non-compliant.</span></span> <span data-ttu-id="bc17b-106">CLS 準拠について詳しくは、「 [CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="bc17b-106">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3).</span></span>  
+ <span data-ttu-id="a855b-104">この警告が発生`[CLSCompliant(false)]`を true に、アセンブリ レベル CLSCompliant 属性が設定されていないアセンブリ内のクラスに表示されます (つまり、行`[assembly: CLSCompliant(true)]`)。</span><span class="sxs-lookup"><span data-stu-id="a855b-104">This warning occurs if `[CLSCompliant(false)]` appears on a class in an assembly which does not have an assembly-level CLSCompliant attribute set to true (that is, the line `[assembly: CLSCompliant(true)]`).</span></span> <span data-ttu-id="a855b-105">アセンブリは自らを CLS 準拠と宣言していないため、非準拠であると見なされます。そのため、アセンブリ内では非準拠を宣言する必要はありません。</span><span class="sxs-lookup"><span data-stu-id="a855b-105">Since the assembly is not declaring itself CLS compliant, there is no need for anything within the assembly to declare itself non-compliant, since it is assumed to be non-compliant.</span></span> <span data-ttu-id="a855b-106">CLS 準拠について詳しくは、「 [CLS 準拠コードの記述](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)」をご覧ください。</span><span class="sxs-lookup"><span data-stu-id="a855b-106">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3).</span></span>  
   
- <span data-ttu-id="bc17b-107">この警告を消去するには、対象属性を削除するか、アセンブリ レベルの属性を追加します。</span><span class="sxs-lookup"><span data-stu-id="bc17b-107">To get rid of this warning, remove the attribute or add the assembly level attribute.</span></span>  
+ <span data-ttu-id="a855b-107">この警告を消去するには、対象属性を削除するか、アセンブリ レベルの属性を追加します。</span><span class="sxs-lookup"><span data-stu-id="a855b-107">To get rid of this warning, remove the attribute or add the assembly level attribute.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="bc17b-108">例</span><span class="sxs-lookup"><span data-stu-id="bc17b-108">Example</span></span>  
- <span data-ttu-id="bc17b-109">次の例では、CS3021 エラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="bc17b-109">The following example generates CS3021:</span></span>  
+## <a name="example"></a><span data-ttu-id="a855b-108">例</span><span class="sxs-lookup"><span data-stu-id="a855b-108">Example</span></span>  
+ <span data-ttu-id="a855b-109">次の例では、CS3021 エラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="a855b-109">The following example generates CS3021:</span></span>  
   
 ```  
 // CS3021.cs  
@@ -43,5 +43,5 @@ public class C
 }  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="bc17b-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="bc17b-110">See Also</span></span>  
- [<span data-ttu-id="bc17b-111">言語への非依存性、および言語非依存コンポーネント</span><span class="sxs-lookup"><span data-stu-id="bc17b-111">Language Independence and Language-Independent Components</span></span>](https://msdn.microsoft.com/library/12a7a7h3)
+## <a name="see-also"></a><span data-ttu-id="a855b-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="a855b-110">See Also</span></span>  
+ [<span data-ttu-id="a855b-111">言語への非依存性、および言語非依存コンポーネント</span><span class="sxs-lookup"><span data-stu-id="a855b-111">Language Independence and Language-Independent Components</span></span>](../../../docs/standard/language-independence-and-language-independent-components.md)
