--- a/docs/visual-basic/misc/bc32209.md
+++ b/docs/visual-basic/misc/bc32209.md
@@ -12,26 +12,26 @@ ms.assetid: fe50736b-444f-4e40-8f80-9760ff13a153
 caps.latest.revision: "7"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: 129817faf3975febab7a8963b90ff683c1d74d62
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 511dd09253ca241b4c393d617aeefb255e5b314b
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="project-39ltprojectnamegt39-requires-a-reference-to-version-39ltversionnumber1gt39-of-assembly-39ltassemblynamegt39-but-references-version-39ltversionnumber2gt39-of-assembly-39ltassemblynamegt39-visual-basic-error"></a><span data-ttu-id="74d4a-102">プロジェクト &#39;&lt;projectname&gt;&#39; バージョン &#39; への参照を必要と&lt;versionnumber1&gt;&#39; アセンブリ &#39; の&lt;assemblyname&gt;&#39;以外の場合が、参照バージョン &#39;&lt;versionnumber2&gt;&#39; アセンブリ &#39; の&lt;assemblyname&gt;&#39;です。(Visual Basic エラー)</span><span class="sxs-lookup"><span data-stu-id="74d4a-102">Project &#39;&lt;projectname&gt;&#39; requires a reference to version &#39;&lt;versionnumber1&gt;&#39; of assembly &#39;&lt;assemblyname&gt;&#39;, but references version &#39;&lt;versionnumber2&gt;&#39; of assembly &#39;&lt;assemblyname&gt;&#39; (Visual Basic Error)</span></span>
-<span data-ttu-id="74d4a-103">プロジェクトは、他の場所で定義されているアセンブリへの間接参照を行いますが、プロジェクトには、それ以降のバージョンのアセンブリへの直接参照も含まれています。</span><span class="sxs-lookup"><span data-stu-id="74d4a-103">A project makes an indirect reference to an assembly that is defined elsewhere, but the project also has a direct reference to a later version of that assembly.</span></span>  
+# <a name="project-39ltprojectnamegt39-requires-a-reference-to-version-39ltversionnumber1gt39-of-assembly-39ltassemblynamegt39-but-references-version-39ltversionnumber2gt39-of-assembly-39ltassemblynamegt39-visual-basic-error"></a><span data-ttu-id="897fa-102">プロジェクト &#39;&lt;projectname&gt;&#39; バージョン &#39; への参照を必要と&lt;versionnumber1&gt;&#39; アセンブリ &#39; の&lt;assemblyname&gt;&#39;以外の場合が、参照バージョン &#39;&lt;versionnumber2&gt;&#39; アセンブリ &#39; の&lt;assemblyname&gt;&#39;です。(Visual Basic エラー)</span><span class="sxs-lookup"><span data-stu-id="897fa-102">Project &#39;&lt;projectname&gt;&#39; requires a reference to version &#39;&lt;versionnumber1&gt;&#39; of assembly &#39;&lt;assemblyname&gt;&#39;, but references version &#39;&lt;versionnumber2&gt;&#39; of assembly &#39;&lt;assemblyname&gt;&#39; (Visual Basic Error)</span></span>
+<span data-ttu-id="897fa-103">プロジェクトは、他の場所で定義されているアセンブリへの間接参照を行いますが、プロジェクトには、それ以降のバージョンのアセンブリへの直接参照も含まれています。</span><span class="sxs-lookup"><span data-stu-id="897fa-103">A project makes an indirect reference to an assembly that is defined elsewhere, but the project also has a direct reference to a later version of that assembly.</span></span>  
   
- <span data-ttu-id="74d4a-104">コンパイラが間接参照を使用するようコードを許可した場合、以前のバージョンではなく以降のバージョンで定義されている型およびプログラミング要素にアクセスすることはできません。</span><span class="sxs-lookup"><span data-stu-id="74d4a-104">If the compiler allowed your code to use the indirect reference, you might not be able to access types and programming elements that are defined in the later version but not in the earlier version.</span></span>  
+ <span data-ttu-id="897fa-104">コンパイラが間接参照を使用するようコードを許可した場合、以前のバージョンではなく以降のバージョンで定義されている型およびプログラミング要素にアクセスすることはできません。</span><span class="sxs-lookup"><span data-stu-id="897fa-104">If the compiler allowed your code to use the indirect reference, you might not be able to access types and programming elements that are defined in the later version but not in the earlier version.</span></span>  
   
- <span data-ttu-id="74d4a-105">**エラー ID:** BC32209</span><span class="sxs-lookup"><span data-stu-id="74d4a-105">**Error ID:** BC32209</span></span>  
+ <span data-ttu-id="897fa-105">**エラー ID:** BC32209</span><span class="sxs-lookup"><span data-stu-id="897fa-105">**Error ID:** BC32209</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="74d4a-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="74d4a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="897fa-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="897fa-106">To correct this error</span></span>  
   
--   <span data-ttu-id="74d4a-107">以前のバージョンのアセンブリへの間接参照を削除し、以降のバージョンへの直接参照を使用します。</span><span class="sxs-lookup"><span data-stu-id="74d4a-107">Remove the indirect reference to the earlier version of the assembly, and use the direct reference to the later version.</span></span>  
+-   <span data-ttu-id="897fa-107">以前のバージョンのアセンブリへの間接参照を削除し、以降のバージョンへの直接参照を使用します。</span><span class="sxs-lookup"><span data-stu-id="897fa-107">Remove the indirect reference to the earlier version of the assembly, and use the direct reference to the later version.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="74d4a-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="74d4a-108">See Also</span></span>  
- [<span data-ttu-id="74d4a-109">共通言語ランタイムのアセンブリ</span><span class="sxs-lookup"><span data-stu-id="74d4a-109">Assemblies in the Common Language Runtime</span></span>](https://msdn.microsoft.com/library/k3677y81)  
- [<span data-ttu-id="74d4a-110">NIB: 名前空間およびコンポーネントの参照</span><span class="sxs-lookup"><span data-stu-id="74d4a-110">NIB: Referencing Namespaces and Components</span></span>](http://msdn.microsoft.com/en-us/568fa759-796b-44cd-bf5e-1cf8de6e38fd)  
- [<span data-ttu-id="74d4a-111">プロジェクト内の参照の管理</span><span class="sxs-lookup"><span data-stu-id="74d4a-111">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)  
- [<span data-ttu-id="74d4a-112">NIB: 参照の管理</span><span class="sxs-lookup"><span data-stu-id="74d4a-112">NIB: Managing References</span></span>](http://msdn.microsoft.com/en-us/910912ce-0dc9-4569-9274-32c44a20cb2c)  
- <span data-ttu-id="74d4a-113">[NIB 方法: [参照の追加] ダイアログ ボックスを使用して参照を追加または削除する](http://msdn.microsoft.com/en-us/3bd75d61-f00c-47c0-86a2-dd1f20e231c9)</span><span class="sxs-lookup"><span data-stu-id="74d4a-113">[NIB How to: Add or Remove References By Using the Add Reference Dialog Box](http://msdn.microsoft.com/en-us/3bd75d61-f00c-47c0-86a2-dd1f20e231c9)</span></span>
+## <a name="see-also"></a><span data-ttu-id="897fa-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="897fa-108">See Also</span></span>  
+ [<span data-ttu-id="897fa-109">共通言語ランタイムのアセンブリ</span><span class="sxs-lookup"><span data-stu-id="897fa-109">Assemblies in the Common Language Runtime</span></span>](../../../docs/framework/app-domains/assemblies-in-the-common-language-runtime.md)  
+ [<span data-ttu-id="897fa-110">NIB: 名前空間およびコンポーネントの参照</span><span class="sxs-lookup"><span data-stu-id="897fa-110">NIB: Referencing Namespaces and Components</span></span>](http://msdn.microsoft.com/en-us/568fa759-796b-44cd-bf5e-1cf8de6e38fd)  
+ [<span data-ttu-id="897fa-111">プロジェクト内の参照の管理</span><span class="sxs-lookup"><span data-stu-id="897fa-111">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)  
+ [<span data-ttu-id="897fa-112">NIB: 参照の管理</span><span class="sxs-lookup"><span data-stu-id="897fa-112">NIB: Managing References</span></span>](http://msdn.microsoft.com/en-us/910912ce-0dc9-4569-9274-32c44a20cb2c)  
+ <span data-ttu-id="897fa-113">[NIB 方法: [参照の追加] ダイアログ ボックスを使用して参照を追加または削除する](http://msdn.microsoft.com/en-us/3bd75d61-f00c-47c0-86a2-dd1f20e231c9)</span><span class="sxs-lookup"><span data-stu-id="897fa-113">[NIB How to: Add or Remove References By Using the Add Reference Dialog Box](http://msdn.microsoft.com/en-us/3bd75d61-f00c-47c0-86a2-dd1f20e231c9)</span></span>
