--- a/docs/visual-basic/misc/bc40034.md
+++ b/docs/visual-basic/misc/bc40034.md
@@ -12,33 +12,33 @@ ms.assetid: 4eb36b3a-1bbe-4e99-9ecb-a12b8729b128
 caps.latest.revision: "9"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: 2a2238216d88a3adb9bb4220414838305213e623
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: e9f1c1186dd79cbf2a08951cfd564c5be9a7955b
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="non-cls-compliant-39mustoverride39-member-is-not-allowed-in-a-cls-compliant-ltclassnamegt"></a><span data-ttu-id="469f6-102">CLS 非準拠 &#39;MustOverride &#39;メンバーは、CLS 準拠では許可されません&lt;classname&gt;</span><span class="sxs-lookup"><span data-stu-id="469f6-102">Non-CLS-compliant &#39;MustOverride&#39; member is not allowed in a CLS-compliant &lt;classname&gt;</span></span>
-<span data-ttu-id="469f6-103">クラスは `<CLSCompliant(True)>`としてマークされていますが、 `MustOverride` プロパティが含まれているか、 `<CLSCompliant(False)>` としてマークされているプロシージャまたはマークされていないプロシージャが含まれています。</span><span class="sxs-lookup"><span data-stu-id="469f6-103">A class is marked as `<CLSCompliant(True)>`, but it contains a `MustOverride` property or procedure that is marked as `<CLSCompliant(False)>` or is not marked.</span></span>  
+# <a name="non-cls-compliant-39mustoverride39-member-is-not-allowed-in-a-cls-compliant-ltclassnamegt"></a><span data-ttu-id="3c725-102">CLS 非準拠 &#39;MustOverride &#39;メンバーは、CLS 準拠では許可されません&lt;classname&gt;</span><span class="sxs-lookup"><span data-stu-id="3c725-102">Non-CLS-compliant &#39;MustOverride&#39; member is not allowed in a CLS-compliant &lt;classname&gt;</span></span>
+<span data-ttu-id="3c725-103">クラスは `<CLSCompliant(True)>`としてマークされていますが、 `MustOverride` プロパティが含まれているか、 `<CLSCompliant(False)>` としてマークされているプロシージャまたはマークされていないプロシージャが含まれています。</span><span class="sxs-lookup"><span data-stu-id="3c725-103">A class is marked as `<CLSCompliant(True)>`, but it contains a `MustOverride` property or procedure that is marked as `<CLSCompliant(False)>` or is not marked.</span></span>  
   
- <span data-ttu-id="469f6-104">クラスに準拠している場合、[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)(CLS) に、そのクラスを使用するアプリケーションとしてもマークされているメンバーだけにアクセスする`<CLSCompliant(True)>`とメンバーを無視します。ありません。</span><span class="sxs-lookup"><span data-stu-id="469f6-104">When a class is compliant with the [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3) (CLS), an application that uses that class accesses only the members that are also marked as `<CLSCompliant(True)>` and ignores the members that are not.</span></span> <span data-ttu-id="469f6-105">ただし、アプリケーションは `MustOverride` プロパティやプロシージャを無視できません。アプリケーションは、そのプロパティまたはプロシージャをオーバーライドするためにそれにアクセスする必要があるためです。</span><span class="sxs-lookup"><span data-stu-id="469f6-105">However, the application cannot ignore a `MustOverride` property or procedure, because it must access that property or procedure to override it.</span></span>  
+ <span data-ttu-id="3c725-104">クラスに準拠している場合、[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)(CLS) に、そのクラスを使用するアプリケーションとしてもマークされているメンバーだけにアクセスする`<CLSCompliant(True)>`とメンバーを無視します。ありません。</span><span class="sxs-lookup"><span data-stu-id="3c725-104">When a class is compliant with the [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md) (CLS), an application that uses that class accesses only the members that are also marked as `<CLSCompliant(True)>` and ignores the members that are not.</span></span> <span data-ttu-id="3c725-105">ただし、アプリケーションは `MustOverride` プロパティやプロシージャを無視できません。アプリケーションは、そのプロパティまたはプロシージャをオーバーライドするためにそれにアクセスする必要があるためです。</span><span class="sxs-lookup"><span data-stu-id="3c725-105">However, the application cannot ignore a `MustOverride` property or procedure, because it must access that property or procedure to override it.</span></span>  
   
- <span data-ttu-id="469f6-106">プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、準拠または非準拠を示すために、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定します。</span><span class="sxs-lookup"><span data-stu-id="469f6-106">When you apply the <xref:System.CLSCompliantAttribute> to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="469f6-107">このパラメーターには既定値がありません。値を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="469f6-107">There is no default for this parameter, and you must supply a value.</span></span>  
+ <span data-ttu-id="3c725-106">プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、準拠または非準拠を示すために、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定します。</span><span class="sxs-lookup"><span data-stu-id="3c725-106">When you apply the <xref:System.CLSCompliantAttribute> to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="3c725-107">このパラメーターには既定値がありません。値を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="3c725-107">There is no default for this parameter, and you must supply a value.</span></span>  
   
- <span data-ttu-id="469f6-108">要素に <xref:System.CLSCompliantAttribute> を適用しないと、その要素は非準拠と見なされます。</span><span class="sxs-lookup"><span data-stu-id="469f6-108">If you do not apply the <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
+ <span data-ttu-id="3c725-108">要素に <xref:System.CLSCompliantAttribute> を適用しないと、その要素は非準拠と見なされます。</span><span class="sxs-lookup"><span data-stu-id="3c725-108">If you do not apply the <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
   
- <span data-ttu-id="469f6-109">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="469f6-109">By default, this message is a warning.</span></span> <span data-ttu-id="469f6-110">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="469f6-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="3c725-109">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="3c725-109">By default, this message is a warning.</span></span> <span data-ttu-id="3c725-110">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="3c725-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="469f6-111">**エラー ID:** BC40034</span><span class="sxs-lookup"><span data-stu-id="469f6-111">**Error ID:** BC40034</span></span>  
+ <span data-ttu-id="3c725-111">**エラー ID:** BC40034</span><span class="sxs-lookup"><span data-stu-id="3c725-111">**Error ID:** BC40034</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="469f6-112">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="469f6-112">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3c725-112">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="3c725-112">To correct this error</span></span>  
   
--   <span data-ttu-id="469f6-113">CLS への準拠が必要なときに、クラス ソース コードを制御できる場合は、メンバーを `<CLSCompliant(True)>`としてマークします。</span><span class="sxs-lookup"><span data-stu-id="469f6-113">If you require CLS compliance and have control over the class source code, mark the member as `<CLSCompliant(True)>`.</span></span>  
+-   <span data-ttu-id="3c725-113">CLS への準拠が必要なときに、クラス ソース コードを制御できる場合は、メンバーを `<CLSCompliant(True)>`としてマークします。</span><span class="sxs-lookup"><span data-stu-id="3c725-113">If you require CLS compliance and have control over the class source code, mark the member as `<CLSCompliant(True)>`.</span></span>  
   
--   <span data-ttu-id="469f6-114">CLS への準拠が必要なときに、クラス ソース コードを制御できない場合や、クラス ソース コードが準拠のための要件を満たしていない場合は、このメンバーを別のクラス内で定義します。</span><span class="sxs-lookup"><span data-stu-id="469f6-114">If you require CLS compliance and do not have control over the class source code, or if it does not qualify to be compliant, define this member within a different class.</span></span>  
+-   <span data-ttu-id="3c725-114">CLS への準拠が必要なときに、クラス ソース コードを制御できない場合や、クラス ソース コードが準拠のための要件を満たしていない場合は、このメンバーを別のクラス内で定義します。</span><span class="sxs-lookup"><span data-stu-id="3c725-114">If you require CLS compliance and do not have control over the class source code, or if it does not qualify to be compliant, define this member within a different class.</span></span>  
   
--   <span data-ttu-id="469f6-115">このメンバーを非準拠のままにしておく必要がある場合は、このメンバーの定義から `MustOverride` キーワードを削除するか、クラス定義から <xref:System.CLSCompliantAttribute> を削除するか、クラスを `<CLSCompliant(False)>`としてマークします。</span><span class="sxs-lookup"><span data-stu-id="469f6-115">If you require that this member remain noncompliant, remove the `MustOverride` keyword from its definition, remove the <xref:System.CLSCompliantAttribute> from the class definition, or mark the class as `<CLSCompliant(False)>`.</span></span>  
+-   <span data-ttu-id="3c725-115">このメンバーを非準拠のままにしておく必要がある場合は、このメンバーの定義から `MustOverride` キーワードを削除するか、クラス定義から <xref:System.CLSCompliantAttribute> を削除するか、クラスを `<CLSCompliant(False)>`としてマークします。</span><span class="sxs-lookup"><span data-stu-id="3c725-115">If you require that this member remain noncompliant, remove the `MustOverride` keyword from its definition, remove the <xref:System.CLSCompliantAttribute> from the class definition, or mark the class as `<CLSCompliant(False)>`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="469f6-116">関連項目</span><span class="sxs-lookup"><span data-stu-id="469f6-116">See Also</span></span>  
- [<span data-ttu-id="469f6-117">MustOverride</span><span class="sxs-lookup"><span data-stu-id="469f6-117">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)  
- [<span data-ttu-id="469f6-118">\<経由で PAVE > CLS 準拠コードの記述</span><span class="sxs-lookup"><span data-stu-id="469f6-118">\<PAVE OVER> Writing CLS-Compliant Code</span></span>](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)
+## <a name="see-also"></a><span data-ttu-id="3c725-116">関連項目</span><span class="sxs-lookup"><span data-stu-id="3c725-116">See Also</span></span>  
+ [<span data-ttu-id="3c725-117">MustOverride</span><span class="sxs-lookup"><span data-stu-id="3c725-117">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)  
+ [<span data-ttu-id="3c725-118">\<経由で PAVE > CLS 準拠コードの記述</span><span class="sxs-lookup"><span data-stu-id="3c725-118">\<PAVE OVER> Writing CLS-Compliant Code</span></span>](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)
