--- a/docs/visual-basic/misc/bc40038.md
+++ b/docs/visual-basic/misc/bc40038.md
@@ -12,36 +12,36 @@ ms.assetid: ec850295-b2fe-4f19-b808-d22fe0aaa32d
 caps.latest.revision: "8"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: b32df2e3e5bb78099fc5e2e2beab0e6ec90464ed
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 5802e3def17a3cc48e292139463d372e12f6be0e
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="root-namespace-ltnamespacenamegt-is-not-cls-compliant"></a><span data-ttu-id="5548a-102">ルート名前空間&lt;namespacename&gt; CLS 準拠ではありません</span><span class="sxs-lookup"><span data-stu-id="5548a-102">Root namespace &lt;namespacename&gt; is not CLS-compliant</span></span>
-<span data-ttu-id="5548a-103">アセンブリが `<CLSCompliant(True)>`としてマークされているのに、ルート名前空間の名前がアンダースコア (`_`) で始まっています。</span><span class="sxs-lookup"><span data-stu-id="5548a-103">An assembly is marked as `<CLSCompliant(True)>`, but the root namespace name begins with an underscore (`_`).</span></span>  
+# <a name="root-namespace-ltnamespacenamegt-is-not-cls-compliant"></a><span data-ttu-id="57196-102">ルート名前空間&lt;namespacename&gt; CLS 準拠ではありません</span><span class="sxs-lookup"><span data-stu-id="57196-102">Root namespace &lt;namespacename&gt; is not CLS-compliant</span></span>
+<span data-ttu-id="57196-103">アセンブリが `<CLSCompliant(True)>`としてマークされているのに、ルート名前空間の名前がアンダースコア (`_`) で始まっています。</span><span class="sxs-lookup"><span data-stu-id="57196-103">An assembly is marked as `<CLSCompliant(True)>`, but the root namespace name begins with an underscore (`_`).</span></span>  
   
- <span data-ttu-id="5548a-104">プログラミング要素に準拠するためには、1 つまたは複数アンダー スコアを含めることができます、[言語非依存および言語非依存コンポーネント](https://msdn.microsoft.com/library/12a7a7h3)(CLS) に始めることはできません、アンダー スコアを使用します。</span><span class="sxs-lookup"><span data-stu-id="5548a-104">A programming element can contain one or more underscores, but to be compliant with the [Language Independence and Language-Independent Components](https://msdn.microsoft.com/library/12a7a7h3) (CLS), it must not begin with an underscore.</span></span> <span data-ttu-id="5548a-105">「 [Declared Element Names](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="5548a-105">See [Declared Element Names](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md).</span></span>  
+ <span data-ttu-id="57196-104">プログラミング要素に準拠するためには、1 つまたは複数アンダー スコアを含めることができます、[言語非依存および言語非依存コンポーネント](../../../docs/standard/language-independence-and-language-independent-components.md)(CLS) に始めることはできません、アンダー スコアを使用します。</span><span class="sxs-lookup"><span data-stu-id="57196-104">A programming element can contain one or more underscores, but to be compliant with the [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md) (CLS), it must not begin with an underscore.</span></span> <span data-ttu-id="57196-105">「 [Declared Element Names](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="57196-105">See [Declared Element Names](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md).</span></span>  
   
- <span data-ttu-id="5548a-106">プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定して、準拠または非準拠を示します。</span><span class="sxs-lookup"><span data-stu-id="5548a-106">When you apply the <xref:System.CLSCompliantAttribute> to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="5548a-107">このパラメーターには既定値がありません。値を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="5548a-107">There is no default for this parameter, and you must supply a value.</span></span>  
+ <span data-ttu-id="57196-106">プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定して、準拠または非準拠を示します。</span><span class="sxs-lookup"><span data-stu-id="57196-106">When you apply the <xref:System.CLSCompliantAttribute> to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="57196-107">このパラメーターには既定値がありません。値を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="57196-107">There is no default for this parameter, and you must supply a value.</span></span>  
   
- <span data-ttu-id="5548a-108">要素に <xref:System.CLSCompliantAttribute> を適用しないと、その要素は非準拠と見なされます。</span><span class="sxs-lookup"><span data-stu-id="5548a-108">If you do not apply the <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
+ <span data-ttu-id="57196-108">要素に <xref:System.CLSCompliantAttribute> を適用しないと、その要素は非準拠と見なされます。</span><span class="sxs-lookup"><span data-stu-id="57196-108">If you do not apply the <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
   
- <span data-ttu-id="5548a-109">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="5548a-109">By default, this message is a warning.</span></span> <span data-ttu-id="5548a-110">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="5548a-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="57196-109">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="57196-109">By default, this message is a warning.</span></span> <span data-ttu-id="57196-110">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="57196-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="5548a-111">**エラー ID:** BC40038</span><span class="sxs-lookup"><span data-stu-id="5548a-111">**Error ID:** BC40038</span></span>  
+ <span data-ttu-id="57196-111">**エラー ID:** BC40038</span><span class="sxs-lookup"><span data-stu-id="57196-111">**Error ID:** BC40038</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5548a-112">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="5548a-112">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="57196-112">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="57196-112">To correct this error</span></span>  
   
--   <span data-ttu-id="5548a-113">CLS 準拠にする必要がある場合は、ルート名前空間の名前を変更し、アンダースコアで始まらないようにします。</span><span class="sxs-lookup"><span data-stu-id="5548a-113">If you require CLS compliance, change the root namespace name so that it does not begin with an underscore.</span></span>  
+-   <span data-ttu-id="57196-113">CLS 準拠にする必要がある場合は、ルート名前空間の名前を変更し、アンダースコアで始まらないようにします。</span><span class="sxs-lookup"><span data-stu-id="57196-113">If you require CLS compliance, change the root namespace name so that it does not begin with an underscore.</span></span>  
   
--   <span data-ttu-id="5548a-114">ルート名前空間の名前を変更できない場合は、アセンブリから <xref:System.CLSCompliantAttribute> を削除するか、アセンブリを `<CLSCompliant(False)>`としてマークします。</span><span class="sxs-lookup"><span data-stu-id="5548a-114">If you require that the root namespace name remain unchanged, then remove the <xref:System.CLSCompliantAttribute> from the assembly or mark it as `<CLSCompliant(False)>`.</span></span>  
+-   <span data-ttu-id="57196-114">ルート名前空間の名前を変更できない場合は、アセンブリから <xref:System.CLSCompliantAttribute> を削除するか、アセンブリを `<CLSCompliant(False)>`としてマークします。</span><span class="sxs-lookup"><span data-stu-id="57196-114">If you require that the root namespace name remain unchanged, then remove the <xref:System.CLSCompliantAttribute> from the assembly or mark it as `<CLSCompliant(False)>`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5548a-115">関連項目</span><span class="sxs-lookup"><span data-stu-id="5548a-115">See Also</span></span>  
- [<span data-ttu-id="5548a-116">Namespace ステートメント</span><span class="sxs-lookup"><span data-stu-id="5548a-116">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)  
- [<span data-ttu-id="5548a-117">Visual Basic における名前空間</span><span class="sxs-lookup"><span data-stu-id="5548a-117">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)  
- [<span data-ttu-id="5548a-118">/rootnamespace</span><span class="sxs-lookup"><span data-stu-id="5548a-118">/rootnamespace</span></span>](../../visual-basic/reference/command-line-compiler/rootnamespace.md)  
- [<span data-ttu-id="5548a-119">NIB: 方法: アプリケーション (Visual Basic) の Namespace を変更</span><span class="sxs-lookup"><span data-stu-id="5548a-119">NIB: How to: Change the Namespace for an Application (Visual Basic)</span></span>](http://msdn.microsoft.com/en-us/029d85c0-e173-4f7a-afba-a29f3aaf6ebf)  
- [<span data-ttu-id="5548a-120">Declared Element Names</span><span class="sxs-lookup"><span data-stu-id="5548a-120">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)  
- [<span data-ttu-id="5548a-121">Visual Basic の名前付け規則</span><span class="sxs-lookup"><span data-stu-id="5548a-121">Visual Basic Naming Conventions</span></span>](../../visual-basic/programming-guide/program-structure/naming-conventions.md)  
- [<span data-ttu-id="5548a-122">\<経由で PAVE > CLS 準拠コードの記述</span><span class="sxs-lookup"><span data-stu-id="5548a-122">\<PAVE OVER> Writing CLS-Compliant Code</span></span>](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)
+## <a name="see-also"></a><span data-ttu-id="57196-115">関連項目</span><span class="sxs-lookup"><span data-stu-id="57196-115">See Also</span></span>  
+ [<span data-ttu-id="57196-116">Namespace ステートメント</span><span class="sxs-lookup"><span data-stu-id="57196-116">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)  
+ [<span data-ttu-id="57196-117">Visual Basic における名前空間</span><span class="sxs-lookup"><span data-stu-id="57196-117">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)  
+ [<span data-ttu-id="57196-118">/rootnamespace</span><span class="sxs-lookup"><span data-stu-id="57196-118">/rootnamespace</span></span>](../../visual-basic/reference/command-line-compiler/rootnamespace.md)  
+ [<span data-ttu-id="57196-119">NIB: 方法: アプリケーション (Visual Basic) の Namespace を変更</span><span class="sxs-lookup"><span data-stu-id="57196-119">NIB: How to: Change the Namespace for an Application (Visual Basic)</span></span>](http://msdn.microsoft.com/en-us/029d85c0-e173-4f7a-afba-a29f3aaf6ebf)  
+ [<span data-ttu-id="57196-120">Declared Element Names</span><span class="sxs-lookup"><span data-stu-id="57196-120">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)  
+ [<span data-ttu-id="57196-121">Visual Basic の名前付け規則</span><span class="sxs-lookup"><span data-stu-id="57196-121">Visual Basic Naming Conventions</span></span>](../../visual-basic/programming-guide/program-structure/naming-conventions.md)  
+ [<span data-ttu-id="57196-122">\<経由で PAVE > CLS 準拠コードの記述</span><span class="sxs-lookup"><span data-stu-id="57196-122">\<PAVE OVER> Writing CLS-Compliant Code</span></span>](http://msdn.microsoft.com/en-us/4c705105-69a2-4e5e-b24e-0633bc32c7f3)
