--- a/docs/visual-basic/misc/bc42204.md
+++ b/docs/visual-basic/misc/bc42204.md
@@ -12,31 +12,31 @@ ms.assetid: b0c3d2b6-2776-4981-b79e-2e36f03d4123
 caps.latest.revision: "12"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: c1e2302c0283f5f2905f0d528e15d1a6e7356e72
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 6d45cad5b55bc45a89038a8028528bf1f729a352
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="assembly-39ltfilepath1gt39-references-assembly-39ltassemblyidentitygt39-which-is-ambiguous-between-39ltfilepath2gt39-referenced-by-project-39ltprojectname1gt39-and-39ltfilepath3gt39-referenced-by-project-39ltprojectname2gt39"></a><span data-ttu-id="8614e-102">アセンブリ &#39;&lt;filepath1&gt;&#39; 参照アセンブリ &#39;&lt;assemblyidentity&gt;&#39;、間であいまいである (& m); #39&lt;filepath2&gt;&#39;です。によって参照されるプロジェクト &#39;&lt;projectname1&gt;&#39;) と &#39;&lt;filepath3&gt;&#39;です。によって参照されるプロジェクト &#39;&lt;projectname2&gt;&#39;)</span><span class="sxs-lookup"><span data-stu-id="8614e-102">Assembly &#39;&lt;filepath1&gt;&#39; references assembly &#39;&lt;assemblyidentity&gt;&#39;, which is ambiguous between &#39;&lt;filepath2&gt;&#39; (referenced by project &#39;&lt;projectname1&gt;&#39;) and &#39;&lt;filepath3&gt;&#39; (referenced by project &#39;&lt;projectname2&gt;&#39;)</span></span>
-<span data-ttu-id="8614e-103">アセンブリ '\<filepath1 >' はアセンブリ参照'\<assemblyidentity > ', 間であいまいである'\<filepath2 >' (プロジェクトによって参照される '\<projectname1 >') と'\<filepath3>' (プロジェクトによって参照される '\<projectname2 >')。</span><span class="sxs-lookup"><span data-stu-id="8614e-103">Assembly '\<filepath1>' references assembly '\<assemblyidentity>', which is ambiguous between '\<filepath2>' (referenced by project '\<projectname1>') and '\<filepath3>' (referenced by project '\<projectname2>').</span></span> <span data-ttu-id="8614e-104">'\<filepath2 >' が適用されます。</span><span class="sxs-lookup"><span data-stu-id="8614e-104">'\<filepath2>' will be used.</span></span> <span data-ttu-id="8614e-105">両方のアセンブリが同一の場合は、参照を同じ場所に変更します。</span><span class="sxs-lookup"><span data-stu-id="8614e-105">If both assemblies are identical, change the references to the same location.</span></span>  
+# <a name="assembly-39ltfilepath1gt39-references-assembly-39ltassemblyidentitygt39-which-is-ambiguous-between-39ltfilepath2gt39-referenced-by-project-39ltprojectname1gt39-and-39ltfilepath3gt39-referenced-by-project-39ltprojectname2gt39"></a><span data-ttu-id="a9959-102">アセンブリ &#39;&lt;filepath1&gt;&#39; 参照アセンブリ &#39;&lt;assemblyidentity&gt;&#39;、間であいまいである (& m); #39&lt;filepath2&gt;&#39;です。によって参照されるプロジェクト &#39;&lt;projectname1&gt;&#39;) と &#39;&lt;filepath3&gt;&#39;です。によって参照されるプロジェクト &#39;&lt;projectname2&gt;&#39;)</span><span class="sxs-lookup"><span data-stu-id="a9959-102">Assembly &#39;&lt;filepath1&gt;&#39; references assembly &#39;&lt;assemblyidentity&gt;&#39;, which is ambiguous between &#39;&lt;filepath2&gt;&#39; (referenced by project &#39;&lt;projectname1&gt;&#39;) and &#39;&lt;filepath3&gt;&#39; (referenced by project &#39;&lt;projectname2&gt;&#39;)</span></span>
+<span data-ttu-id="a9959-103">アセンブリ '\<filepath1 >' はアセンブリ参照'\<assemblyidentity > ', 間であいまいである'\<filepath2 >' (プロジェクトによって参照される '\<projectname1 >') と'\<filepath3>' (プロジェクトによって参照される '\<projectname2 >')。</span><span class="sxs-lookup"><span data-stu-id="a9959-103">Assembly '\<filepath1>' references assembly '\<assemblyidentity>', which is ambiguous between '\<filepath2>' (referenced by project '\<projectname1>') and '\<filepath3>' (referenced by project '\<projectname2>').</span></span> <span data-ttu-id="a9959-104">'\<filepath2 >' が適用されます。</span><span class="sxs-lookup"><span data-stu-id="a9959-104">'\<filepath2>' will be used.</span></span> <span data-ttu-id="a9959-105">両方のアセンブリが同一の場合は、参照を同じ場所に変更します。</span><span class="sxs-lookup"><span data-stu-id="a9959-105">If both assemblies are identical, change the references to the same location.</span></span>  
   
- <span data-ttu-id="8614e-106">アセンブリは、複数のファイル参照がある、別のアセンブリ内の型にアクセスします。</span><span class="sxs-lookup"><span data-stu-id="8614e-106">An assembly accesses a type in another assembly to which it has more than one file reference.</span></span>  
+ <span data-ttu-id="a9959-106">アセンブリは、複数のファイル参照がある、別のアセンブリ内の型にアクセスします。</span><span class="sxs-lookup"><span data-stu-id="a9959-106">An assembly accesses a type in another assembly to which it has more than one file reference.</span></span>  
   
- <span data-ttu-id="8614e-107">コンパイラは、さまざまな場所にあるファイルが同じアセンブリの同じバージョンを保持することを保証できません。</span><span class="sxs-lookup"><span data-stu-id="8614e-107">The compiler cannot guarantee that the files at the different locations hold the same version of the same assembly.</span></span> <span data-ttu-id="8614e-108">したがって、ファイル参照があいまいで、コンパイラはいずれかを選択する必要があります。</span><span class="sxs-lookup"><span data-stu-id="8614e-108">Therefore, the file references are ambiguous and the compiler must select one.</span></span>  
+ <span data-ttu-id="a9959-107">コンパイラは、さまざまな場所にあるファイルが同じアセンブリの同じバージョンを保持することを保証できません。</span><span class="sxs-lookup"><span data-stu-id="a9959-107">The compiler cannot guarantee that the files at the different locations hold the same version of the same assembly.</span></span> <span data-ttu-id="a9959-108">したがって、ファイル参照があいまいで、コンパイラはいずれかを選択する必要があります。</span><span class="sxs-lookup"><span data-stu-id="a9959-108">Therefore, the file references are ambiguous and the compiler must select one.</span></span>  
   
- <span data-ttu-id="8614e-109">*アセンブリ ID* には、アセンブリの名前、バージョン、公開キー (存在する場合)、およびカルチャが含まれます。</span><span class="sxs-lookup"><span data-stu-id="8614e-109">The *assembly identity* includes the assembly's name, version, public key if any, and culture.</span></span> <span data-ttu-id="8614e-110">この情報はアセンブリを一意に識別します。</span><span class="sxs-lookup"><span data-stu-id="8614e-110">This information uniquely identifies the assembly.</span></span>  
+ <span data-ttu-id="a9959-109">*アセンブリ ID* には、アセンブリの名前、バージョン、公開キー (存在する場合)、およびカルチャが含まれます。</span><span class="sxs-lookup"><span data-stu-id="a9959-109">The *assembly identity* includes the assembly's name, version, public key if any, and culture.</span></span> <span data-ttu-id="a9959-110">この情報はアセンブリを一意に識別します。</span><span class="sxs-lookup"><span data-stu-id="a9959-110">This information uniquely identifies the assembly.</span></span>  
   
- <span data-ttu-id="8614e-111">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="8614e-111">By default, this message is a warning.</span></span> <span data-ttu-id="8614e-112">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="8614e-112">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="a9959-111">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="a9959-111">By default, this message is a warning.</span></span> <span data-ttu-id="a9959-112">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="a9959-112">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="8614e-113">**エラー ID:** BC42204</span><span class="sxs-lookup"><span data-stu-id="8614e-113">**Error ID:** BC42204</span></span>  
+ <span data-ttu-id="a9959-113">**エラー ID:** BC42204</span><span class="sxs-lookup"><span data-stu-id="a9959-113">**Error ID:** BC42204</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8614e-114">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="8614e-114">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a9959-114">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="a9959-114">To correct this error</span></span>  
   
-1.  <span data-ttu-id="8614e-115">どのファイルがアセンブリの最適な選択肢かを決定します。</span><span class="sxs-lookup"><span data-stu-id="8614e-115">Determine which file represents the best choice for the assembly.</span></span> <span data-ttu-id="8614e-116">必要に応じて、最新のバージョン、ファイルのアクセシビリティ、および更新される可能性などの条件を使用する場合があります。</span><span class="sxs-lookup"><span data-stu-id="8614e-116">You might use criteria such as the most recent version, accessibility of the file, and likelihood of being updated when appropriate.</span></span>  
+1.  <span data-ttu-id="a9959-115">どのファイルがアセンブリの最適な選択肢かを決定します。</span><span class="sxs-lookup"><span data-stu-id="a9959-115">Determine which file represents the best choice for the assembly.</span></span> <span data-ttu-id="a9959-116">必要に応じて、最新のバージョン、ファイルのアクセシビリティ、および更新される可能性などの条件を使用する場合があります。</span><span class="sxs-lookup"><span data-stu-id="a9959-116">You might use criteria such as the most recent version, accessibility of the file, and likelihood of being updated when appropriate.</span></span>  
   
-2.  <span data-ttu-id="8614e-117">選択したファイルへの同一のファイル パスを使用するように、このアセンブリへのすべてのファイル参照を変更します。</span><span class="sxs-lookup"><span data-stu-id="8614e-117">Change all file references to this assembly so they use the identical file path to your chosen file.</span></span>  
+2.  <span data-ttu-id="a9959-117">選択したファイルへの同一のファイル パスを使用するように、このアセンブリへのすべてのファイル参照を変更します。</span><span class="sxs-lookup"><span data-stu-id="a9959-117">Change all file references to this assembly so they use the identical file path to your chosen file.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8614e-118">関連項目</span><span class="sxs-lookup"><span data-stu-id="8614e-118">See Also</span></span>  
- [<span data-ttu-id="8614e-119">共通言語ランタイムのアセンブリ</span><span class="sxs-lookup"><span data-stu-id="8614e-119">Assemblies in the Common Language Runtime</span></span>](https://msdn.microsoft.com/library/k3677y81)  
- [<span data-ttu-id="8614e-120">プロジェクト内の参照の管理</span><span class="sxs-lookup"><span data-stu-id="8614e-120">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)
+## <a name="see-also"></a><span data-ttu-id="a9959-118">関連項目</span><span class="sxs-lookup"><span data-stu-id="a9959-118">See Also</span></span>  
+ [<span data-ttu-id="a9959-119">共通言語ランタイムのアセンブリ</span><span class="sxs-lookup"><span data-stu-id="a9959-119">Assemblies in the Common Language Runtime</span></span>](../../../docs/framework/app-domains/assemblies-in-the-common-language-runtime.md)  
+ [<span data-ttu-id="a9959-120">プロジェクト内の参照の管理</span><span class="sxs-lookup"><span data-stu-id="a9959-120">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)
