--- a/docs/visual-basic/misc/bc42205.md
+++ b/docs/visual-basic/misc/bc42205.md
@@ -12,31 +12,31 @@ ms.assetid: c36feb10-dded-4073-9553-af278ae5560b
 caps.latest.revision: "10"
 author: dotnet-bot
 ms.author: dotnetcontent
-ms.openlocfilehash: de057afbf6d09acea3c58bd605a2819169b425fb
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 713c99719cc2227bb5d1d9340ba8eb653379aebf
+ms.sourcegitcommit: 685143b62385500f59bc36274b8adb191f573a16
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 12/09/2017
 ---
-# <a name="assembly-39ltfilepath1gt39-references-assembly-39ltassemblyidentitygt39-which-is-ambiguous-between-39ltfilepath2gt39-and-39ltfilepath3gt39"></a><span data-ttu-id="11389-102">アセンブリ &#39;&lt;filepath1&gt;&#39; 参照アセンブリ &#39;&lt;assemblyidentity&gt;&#39;、間であいまいである (& m); #39&lt;filepath2&gt;&#39; と &#39;&lt;filepath3&gt;&#39;です。</span><span class="sxs-lookup"><span data-stu-id="11389-102">Assembly &#39;&lt;filepath1&gt;&#39; references assembly &#39;&lt;assemblyidentity&gt;&#39;, which is ambiguous between &#39;&lt;filepath2&gt;&#39; and &#39;&lt;filepath3&gt;&#39;</span></span>
-<span data-ttu-id="11389-103">アセンブリ '\<filepath1 >' アセンブリ参照'\<assemblyidentity > 'は、間においてあいまい'\<filepath2 >' と '\<filepath3 >' です。</span><span class="sxs-lookup"><span data-stu-id="11389-103">Assembly '\<filepath1>' references assembly '\<assemblyidentity>', which is ambiguous between '\<filepath2>' and '\<filepath3>'.</span></span> <span data-ttu-id="11389-104">'\<filepath2 >' が適用されます。</span><span class="sxs-lookup"><span data-stu-id="11389-104">'\<filepath2>' will be used.</span></span>  
+# <a name="assembly-39ltfilepath1gt39-references-assembly-39ltassemblyidentitygt39-which-is-ambiguous-between-39ltfilepath2gt39-and-39ltfilepath3gt39"></a><span data-ttu-id="d98ac-102">アセンブリ &#39;&lt;filepath1&gt;&#39; 参照アセンブリ &#39;&lt;assemblyidentity&gt;&#39;、間であいまいである (& m); #39&lt;filepath2&gt;&#39; と &#39;&lt;filepath3&gt;&#39;です。</span><span class="sxs-lookup"><span data-stu-id="d98ac-102">Assembly &#39;&lt;filepath1&gt;&#39; references assembly &#39;&lt;assemblyidentity&gt;&#39;, which is ambiguous between &#39;&lt;filepath2&gt;&#39; and &#39;&lt;filepath3&gt;&#39;</span></span>
+<span data-ttu-id="d98ac-103">アセンブリ '\<filepath1 >' アセンブリ参照'\<assemblyidentity > 'は、間においてあいまい'\<filepath2 >' と '\<filepath3 >' です。</span><span class="sxs-lookup"><span data-stu-id="d98ac-103">Assembly '\<filepath1>' references assembly '\<assemblyidentity>', which is ambiguous between '\<filepath2>' and '\<filepath3>'.</span></span> <span data-ttu-id="d98ac-104">'\<filepath2 >' が適用されます。</span><span class="sxs-lookup"><span data-stu-id="d98ac-104">'\<filepath2>' will be used.</span></span>  
   
- <span data-ttu-id="11389-105">複数のファイルの参照先に指定している別のアセンブリの型にアセンブリがアクセスしています。</span><span class="sxs-lookup"><span data-stu-id="11389-105">An assembly accesses a type in another assembly to which it has more than one file reference.</span></span>  
+ <span data-ttu-id="d98ac-105">複数のファイルの参照先に指定している別のアセンブリの型にアセンブリがアクセスしています。</span><span class="sxs-lookup"><span data-stu-id="d98ac-105">An assembly accesses a type in another assembly to which it has more than one file reference.</span></span>  
   
- <span data-ttu-id="11389-106">コンパイラは、さまざまな場所にあるファイルが同じアセンブリの同じバージョンを保持することを保証できません。</span><span class="sxs-lookup"><span data-stu-id="11389-106">The compiler cannot guarantee that the files at the different locations hold the same version of the same assembly.</span></span> <span data-ttu-id="11389-107">したがって、ファイル参照があいまいで、コンパイラはいずれかを選択する必要があります。</span><span class="sxs-lookup"><span data-stu-id="11389-107">Therefore, the file references are ambiguous and the compiler must select one.</span></span>  
+ <span data-ttu-id="d98ac-106">コンパイラは、さまざまな場所にあるファイルが同じアセンブリの同じバージョンを保持することを保証できません。</span><span class="sxs-lookup"><span data-stu-id="d98ac-106">The compiler cannot guarantee that the files at the different locations hold the same version of the same assembly.</span></span> <span data-ttu-id="d98ac-107">したがって、ファイル参照があいまいで、コンパイラはいずれかを選択する必要があります。</span><span class="sxs-lookup"><span data-stu-id="d98ac-107">Therefore, the file references are ambiguous and the compiler must select one.</span></span>  
   
- <span data-ttu-id="11389-108">*アセンブリ ID* には、アセンブリの名前、バージョン、公開キー (存在する場合)、およびカルチャが含まれます。</span><span class="sxs-lookup"><span data-stu-id="11389-108">The *assembly identity* includes the assembly's name, version, public key if any, and culture.</span></span> <span data-ttu-id="11389-109">この情報はアセンブリを一意に識別します。</span><span class="sxs-lookup"><span data-stu-id="11389-109">This information uniquely identifies the assembly.</span></span>  
+ <span data-ttu-id="d98ac-108">*アセンブリ ID* には、アセンブリの名前、バージョン、公開キー (存在する場合)、およびカルチャが含まれます。</span><span class="sxs-lookup"><span data-stu-id="d98ac-108">The *assembly identity* includes the assembly's name, version, public key if any, and culture.</span></span> <span data-ttu-id="d98ac-109">この情報はアセンブリを一意に識別します。</span><span class="sxs-lookup"><span data-stu-id="d98ac-109">This information uniquely identifies the assembly.</span></span>  
   
- <span data-ttu-id="11389-110">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="11389-110">By default, this message is a warning.</span></span> <span data-ttu-id="11389-111">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="11389-111">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="d98ac-110">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="d98ac-110">By default, this message is a warning.</span></span> <span data-ttu-id="d98ac-111">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="d98ac-111">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="11389-112">**エラー ID:** BC42205</span><span class="sxs-lookup"><span data-stu-id="11389-112">**Error ID:** BC42205</span></span>  
+ <span data-ttu-id="d98ac-112">**エラー ID:** BC42205</span><span class="sxs-lookup"><span data-stu-id="d98ac-112">**Error ID:** BC42205</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="11389-113">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="11389-113">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d98ac-113">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="d98ac-113">To correct this error</span></span>  
   
-1.  <span data-ttu-id="11389-114">どのファイルがアセンブリの最適な選択肢かを決定します。</span><span class="sxs-lookup"><span data-stu-id="11389-114">Determine which file represents the best choice for the assembly.</span></span> <span data-ttu-id="11389-115">必要に応じて、最新のバージョン、ファイルのアクセシビリティ、および更新される可能性などの条件を使用する場合があります。</span><span class="sxs-lookup"><span data-stu-id="11389-115">You might use criteria such as the most recent version, accessibility of the file, and likelihood of being updated when appropriate.</span></span>  
+1.  <span data-ttu-id="d98ac-114">どのファイルがアセンブリの最適な選択肢かを決定します。</span><span class="sxs-lookup"><span data-stu-id="d98ac-114">Determine which file represents the best choice for the assembly.</span></span> <span data-ttu-id="d98ac-115">必要に応じて、最新のバージョン、ファイルのアクセシビリティ、および更新される可能性などの条件を使用する場合があります。</span><span class="sxs-lookup"><span data-stu-id="d98ac-115">You might use criteria such as the most recent version, accessibility of the file, and likelihood of being updated when appropriate.</span></span>  
   
-2.  <span data-ttu-id="11389-116">選択したファイルへの同一のファイル パスを使用するように、このアセンブリへのすべてのファイル参照を変更します。</span><span class="sxs-lookup"><span data-stu-id="11389-116">Change all file references to this assembly so they use the identical file path to your chosen file.</span></span>  
+2.  <span data-ttu-id="d98ac-116">選択したファイルへの同一のファイル パスを使用するように、このアセンブリへのすべてのファイル参照を変更します。</span><span class="sxs-lookup"><span data-stu-id="d98ac-116">Change all file references to this assembly so they use the identical file path to your chosen file.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="11389-117">関連項目</span><span class="sxs-lookup"><span data-stu-id="11389-117">See Also</span></span>  
- [<span data-ttu-id="11389-118">共通言語ランタイムのアセンブリ</span><span class="sxs-lookup"><span data-stu-id="11389-118">Assemblies in the Common Language Runtime</span></span>](https://msdn.microsoft.com/library/k3677y81)  
- [<span data-ttu-id="11389-119">プロジェクト内の参照の管理</span><span class="sxs-lookup"><span data-stu-id="11389-119">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)  
+## <a name="see-also"></a><span data-ttu-id="d98ac-117">関連項目</span><span class="sxs-lookup"><span data-stu-id="d98ac-117">See Also</span></span>  
+ [<span data-ttu-id="d98ac-118">共通言語ランタイムのアセンブリ</span><span class="sxs-lookup"><span data-stu-id="d98ac-118">Assemblies in the Common Language Runtime</span></span>](../../../docs/framework/app-domains/assemblies-in-the-common-language-runtime.md)  
+ [<span data-ttu-id="d98ac-119">プロジェクト内の参照の管理</span><span class="sxs-lookup"><span data-stu-id="d98ac-119">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)  
