Commit translated content

--- a/docs/framework/migration-guide/retargeting/4.6.2-4.7.md
+++ b/docs/framework/migration-guide/retargeting/4.6.2-4.7.md
@@ -1,5 +1,5 @@
 ---
-title: ".NET Framework 4.6.2 に 4.7 からの移行の変更の再ターゲット"
+title: ".NET Framework 4.6.2 から 4.7 への移行に関する変更の再ターゲット"
 ms.date: 06/16/2017
 ms.prod: .net-framework
 ms.technology:
@@ -11,19 +11,19 @@ ms.assetid: 41c4d690-5834-4d2a-8d96-10cab9326ded
 author: conniey
 ms.author: ronpet
 manager: wpickett
-ms.openlocfilehash: b0eaf76eb2c9781fa44f25a350afd3b3223da296
-ms.sourcegitcommit: 32f5e1db8755ed7dfac0b4ec764fa809e5a7548c
+ms.openlocfilehash: 3d3f601e9a62901841088b0f40cf4216ee04e1f4
+ms.sourcegitcommit: 5126483ef09c487296801bbac368dd8a55a6b709
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/25/2017
+ms.lasthandoff: 12/07/2017
 ---
-# <a name="retargeting-changes-for-migration-from-net-framework-462-to-47"></a>.NET Framework 4.6.2 に 4.7 からの移行の変更の再ターゲット
+# <a name="retargeting-changes-for-migration-from-net-framework-462-to-47"></a>.NET Framework 4.6.2 から 4.7 への移行に関する変更の再ターゲット
 
 [!include[versionselector](../../../../includes/migration-guide/retargeting/versionselector.md)]
 
 [!include[introduction](../../../../includes/migration-guide/retargeting/introduction.md)]
 
-.NET Framework 4.6.2 に 4.7 から移行する場合は、アプリに影響するアプリケーションの互換性の問題について次のトピックを確認します。
+.NET Framework 4.6.2 から 4.7 へ移行するときは、アプリに影響する可能性があるアプリケーションの互換性の問題を扱った次のトピックをレビューしてください。
 
 ## <a name="aspnet"></a>ASP.NET
 
@@ -33,7 +33,7 @@ ms.lasthandoff: 10/25/2017
 
 ## <a name="networking"></a>ネットワーク
 
-[!include[Default value of ServicePointManager.SecurityProtocol is SecurityProtocolType.System.Default](~/includes/migration-guide/retargeting/networking/default-value-servicepointmanagersecurityprotocol.md)]
+[!include[Default value of ServicePointManager.SecurityProtocol is SecurityProtocolType.SystemDefault](~/includes/migration-guide/retargeting/networking/default-value-servicepointmanagersecurityprotocol.md)]
 
 [!include[SslStream supports TLS Alerts](~/includes/migration-guide/retargeting/networking/sslstream-supports-tls-alerts.md)]
 
